DUTCH: Dutch RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73628 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_nl.properties
@@ -1,19 +1,19 @@
 events.heading=Gebeurtenissen
-title.completedEvents=Voltooid
-title.incompleteEvents=Niet afgerond
+title.completedEvents=Afgerond
+title.incompleteEvents=Onafgerond
 title.completeEvent=Gebeurtenis afronden
-message.completingEvent=Gebeurtenis afronden
+message.completingEvent=Gebeurtenis wordt afgerond
 message.completeEventFailure=Gebeurtenis kon niet worden afgerond
 message.revokingEvent=Gebeurtenis intrekken
 message.revokeEventFailure=Gebeurtenis kon niet worden ingetrokken
 label.automatic=Automatisch
 label.manual=Handmatig
-label.completedBy=Voltooid door
-label.completedAt=Voltooid op
+label.completedBy=Afgerond door
+label.completedAt=Afgerond op
 label.asOf=Begindatum
-label.noDispositionSchedule=Archiveringslevenscyclus bestaat niet.
+label.noDispositionSchedule=Archiveringscyclus bestaat niet.
 label.noEventsInDispositionSchedule=Er zijn geen gebeurtenissen voor stap ''{0}''.
-label.completeDispositionSchedule=Archiveringslevenscyclus afgerond.
+label.completeDispositionSchedule=Archiveringscyclus afgerond.
 label.dispositionScheduleAppliedToFolder=Bewaarschema toegepast op bovenliggende archiefmap, met begindatum: {0}.
 label.linkToFoldersDispositionSchedule=Gebeurtenissen voor bovenliggende map bekijken
 label.loadFailure=Kon gebeurtenissen niet laden
