--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_nl.properties
@@ -10,7 +10,7 @@ button.view-record=Record bekijken
 
 label.clear-log-title=Auditlog wissen?
 label.clear-log-confirmation=Weet u zeker dat u het auditlog wilt wissen?
-label.clearing-log-message=Een ogenblik geduld. Het auditlog wordt gewist.
+label.clearing-log-message=Een ogenblik geduld, het auditlog wordt gewist.
 label.cleared-log-message=Auditlog gewist.
 message.clear-log-fail = Fout bij wissen van auditlog.
 
@@ -24,20 +24,20 @@ message.stop-log-fail = Fout bij stoppen van auditlog.
 label.started-at=Auditlog gestart om {0}
 label.start-log-title=Auditlog starten?
 label.start-log-confirmation=Weet u zeker dat u het auditlog wilt starten?
-label.starting-log-message=Een ogenblik geduld. Het auditlog wordt gestart.
+label.starting-log-message=Een ogenblik geduld, het auditlog wordt gestart.
 label.started-log-message=Auditlog gestart.
 message.start-log-fail = Fout bij starten van auditlog.
 
 label.button-clear=Wissen
 label.button-stop=Stoppen
 label.button-start=Starten
-label.button-view-log=Volledig log bekijken
+label.button-view-log=Volledig logboek bekijken
 label.button-specify=Specificeren
 label.button-export=Exporteren
 label.button-file-record=Archiveren als record
 
 label.filed-log-message=Auditlog is gearchiveerd als een record.
-message.file-log-fail=Fout bij archiveren van geschiedenis bijhouden als record.
+message.file-log-fail=Fout bij archiveren van audit als record.
 label.file-record=Record archiveren
 
 
@@ -49,9 +49,12 @@ label.name=Naam
 label.user=Gebruiker
 label.role=Rol
 label.event=Gebeurtenis
-label.all=Alle
+label.all=Alles
 label.identifier=Identificatie
 label.no-previous=<geen>
 
-node.root=Selectielijst
+node.root=Ordeningsplan
 title.single=Locatie voor auditrecord selecteren
+
+label.select.recordfolder.title=Archiefmap selecteren
+label.select.recordfolder.text=Selecteer een archiefmap
