--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-events.get_nl.properties
@@ -4,13 +4,13 @@ label.editevent.title=Gebeurtenis bewerken
 label.general=Algemeen
 label.label=Label
 label.type=Type
-label.required=Vereiste velden
+label.required=Verplichte velden
 
 button.newevent=Nieuwe gebeurtenis
 
 message.confirm.removeevent.title=Gebeurtenis verwijderen
 message.confirm.removeevent.text=Weet u zeker dat u ''{0}'' wilt verwijderen?
-message.removeevent.success=Gebeurtenis met succes verwijderd.
+message.removeevent.success=Gebeurtenis verwijderd.
 message.removeevent.failure=Kon gebeurtenis niet verwijderen.
 message.saveevent.saving=Gebeurtenis opslaan...
 message.loadevent.failure=Kon de gegevens voor de gebeurtenis niet laden.
