--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_nl.properties
@@ -11,14 +11,14 @@ button.newlist=Nieuwe lijst
 
 message.confirm.deletelist.title=Lijst verwijderen
 message.confirm.deletelist.text=Weet u zeker dat u ''{0}'' wilt verwijderen?
-message.deletelist.success=Lijst met succes verwijderd.
+message.deletelist.success=Lijst verwijderd.
 message.deletelist.failure=Kon lijst niet verwijderen.
 message.loading.lists=Lijst met waarden laden...
 message.loading.values=Waarden laden...
 message.loading.access=Toegang laden...
 message.empty.lists=Klik op 'Nieuwe lijst' om een lijst aan te maken.
 message.empty.values=Voer in het tekstveld een waarde in en klik op 'Toevoegen'.
-message.empty.access=Klik op 'Toevoegen' voor toegang tot de waarde voor een groep of een gebruiker.
+message.empty.access=Klik op 'Toevoegen' om een groep of een gebruiker toegang te geven.
 message.error=Kon gegevens niet laden.
 message.addvalue.failure=Kon waarde ''{0}'' niet laden
 message.addlist.failure.title=Kon lijst niet toevoegen
@@ -31,7 +31,7 @@ message.deletevalue.failure=Kon waarde niet verwijderen.
 message.confirm.removeaccess.title=Toegangsautoriteit verwijderen
 message.confirm.removeaccess.text=Weet u zeker dat u ''{0}'' wilt verwijderen?
 message.removeaccess.failure=Kon toegangsautoriteit niet verwijderen.
-message.addaccess.failure=Kon geen waarde toevoegen.
+message.addaccess.failure=Kon waarde niet toevoegen.
 
 table.header.actions=Acties
 table.header.icon=Pictogram
