--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/dashlets/datasets.get_nl.properties
@@ -3,8 +3,8 @@ dataSet.label=Gegevensverzameling
 dataSet.select.title=Selecteer een gegevensverzameling en klik op Importeren om de testgegevens te laden.
 dataSet.select.label=Een gegevensverzameling selecteren
 dataSet.importButton.text=Importeren
-dataSet.message.importing=Een ogenblik geduld. Record Management testgegevens worden ge\u00efmporteerd...
-dataSet.message.import-ok=Geselecteerde gegevensverzameling is met succes ge\u00efmporteerd.
-dataSet.message.import-fail=Kon testgegevens niet naar Record Management locatie importeren.
+dataSet.message.importing=Een ogenblik geduld, testgegevens voor Record Management worden ge\u00efmporteerd...
+dataSet.message.import-ok=De geselecteerde gegevensverzameling is ge\u00efmporteerd.
+dataSet.message.import-fail=Kon testgegevens niet naar Record Management-locatie importeren.
 dataset.not-rm-admin=U hebt geen rechten voor het importeren van een gegevensverzameling.
-dataset.not-rm-site=Deze dashlet kan alleen voor RM locaties worden gebruikt!
+dataset.not-rm-site=Deze dashlet kan alleen voor RM-locaties worden gebruikt!
