--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_nl.properties
@@ -1,20 +1,20 @@
 ## Title
 header.savedsearch=Opgeslagen zoekopdrachten
 
-rm.savedsearch.vitalRecordsName=Vitale Records gereed voor beoordeling
-rm.savedsearch.vitalRecordsDesc=Alle records die momenteel gereed zijn voor beoordeling.
+rm.savedsearch.vitalRecordsName=Vitale records gereed voor revisie
+rm.savedsearch.vitalRecordsDesc=Alle records die momenteel gereed zijn voor revisie.
 
-rm.savedsearch.incompleteRecordsName=Niet afgeronde records
-rm.savedsearch.incompleteRecordsDesc=Alle niet afgeronde records.
+rm.savedsearch.incompleteRecordsName=Niet-afgeronde records
+rm.savedsearch.incompleteRecordsDesc=Alle niet-afgeronde records.
 
-rm.savedsearch.cutoffRecordsName=Records die in aanmerking komen voor afsluiten
-rm.savedsearch.cutoffRecordsDesc=Alle records die momenteel in aanmerking komen voor afsluiten.
+rm.savedsearch.cutoffRecordsName=Records en archiefmappen die in aanmerking komen voor afsluiten
+rm.savedsearch.cutoffRecordsDesc=Alle records en archiefmappen die momenteel in aanmerking komen voor afsluiten
 
-rm.savedsearch.transferRecordsName=Records die in aanmerking komen voor overzetten
-rm.savedsearch.transferRecordsDesc=Alle records die momenteel in aanmerking komen voor overzetten.
+rm.savedsearch.transferRecordsName=Records en archiefmappen die in aanmerking komen voor overzetten
+rm.savedsearch.transferRecordsDesc=Alle records en archiefmappen die momenteel in aanmerking komen voor overzetten
 
-rm.savedsearch.destructionRecordsName=Records die in aanmerking komen voor vernietiging
-rm.savedsearch.destructionRecordsDesc=Alle records die momenteel in aanmerking komen voor vernietiging.
+rm.savedsearch.destructionRecordsName=Records en archiefmappen die in aanmerking komen voor vernietiging
+rm.savedsearch.destructionRecordsDesc=Alle records en archiefmappen die momenteel in aanmerking komen voor vernietiging
 
-rm.savedsearch.frozenRecordsName=Bevroren records
-rm.savedsearch.frozenRecordsDesc=Alle bevroren records.
+rm.savedsearch.frozenRecordsName=Records en archiefmappen die in wachtstand zijn
+rm.savedsearch.frozenRecordsDesc=Alle records en archiefmappen die in wachtstand zijn.
