--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_nl.properties
@@ -3,8 +3,8 @@ disposition-schedule.heading=Bewaarschema
 title.properties=Algemeen
 title.actions=Archiveringsstappen
 
-label.dispositionAuthority=Archiefautoriteit
-label.dispositionInstructions=Bewaar- en vernietigingsinstructies
+label.dispositionAuthority=Archiveringsautoriteit
+label.dispositionInstructions=Archiveringsinstructies
 label.appliedTo=Toegepast op
 label.appliedTo.record=Record
 label.appliedTo.folder=Map
@@ -19,4 +19,4 @@ link.description=Beschrijving bekijken
 button.addevent=Gebeurtenis toevoegen
 
 title.noDispositionSchedule=Er is geen bewaarschema gevonden
-button.createDispositionSchedule=Bewaarschema cre\u00ebren
+button.createDispositionSchedule=Bewaarschema maken
