--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_nl.properties
@@ -1,14 +1,14 @@
 message.getpermissionsfail=Kon rechten niet ophalen van de server.
 message.selectauthority=Een gebruiker of een groep selecteren
-message.authoritypickerfail=Kon onderdeel Authority Finder niet laden
-message.finish-success=Rechten met succes bijgewerkt.
+message.authoritypickerfail=Kon onderdeel 'Autoriteit zoeken' niet laden
+message.finish-success=Rechten bijgewerkt.
 message.finish-failure=Kon rechten niet bijwerken: {0}
 
 label.title=Rechten beheren: {0}
 label.inherit=Rechten overnemen
 label.readonly=Alleen-lezen
 label.readandfile=Lezen en archiveren
-label.inherited=Overgenomen
+label.inherited=overgenomen
 label.local=lokaal
 label.permissions=Rechten
 label.actions=Acties
