--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_nl.properties
@@ -1,4 +1,4 @@
-form.required.fields=Vereiste velden
+form.required.fields=Verplichte velden
 header.newRule=Nieuwe regel
 header.editRule=Regel bewerken
 header.general=Algemeen
@@ -20,5 +20,5 @@ header.action=Actie uitvoeren
 message.creating=Regel maken...
 message.updating=Regel bijwerken...
 message.persist-failure=Kon regel niet behouden
-message.createAnotherRule=Regel is met succes gemaakt 
-message.loading=De selectielijst laden...
+message.createAnotherRule=Regel is gemaakt 
+message.loading=Het ordeningsplan laden...
