--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_nl.properties
@@ -10,6 +10,6 @@ menu.option.run=Regels uitvoeren voor deze map
 menu.option.run-recursive=Regels uitvoeren voor deze map en de submappen hiervan
 message.getRules-failure=Kon regels niet laden
 message.runningRules=Regel(s) uitvoeren...
-message.runRules-success=Regel(s) met succes uitgevoerd
+message.runRules-success=Regel(s) uitgevoerd
 message.runRules-failure=Kon regels niet uitvoeren
-filePlan.label = Selectielijst
+filePlan.label = Ordeningsplan
