--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_nl.properties
@@ -1,7 +1,7 @@
 message.loading=Laden...
 message.empty=Geen resultaten gevonden.
 message.error=Fout tijdens zoeken
-message.foundresults={0} item(s) gevonden.
+message.foundresults={0} onderde(e)l(en) gevonden.
 message.errorloadsearches=Fout bij laden van opgeslagen zoekopdrachten.
 message.errorexport=Fout bij exporteren van zoekresultaten.
 message.selectdate=Datum selecteren
@@ -9,45 +9,46 @@ message.selectdate=Datum selecteren
 
 message.deletesearch.title=Zoekopdracht verwijderen
 message.deletesearch.description=Weet u zeker dat u zoekopdracht ''{0}'' wilt verwijderen?
-message.deletesearch.success=Zoekopdracht is met succes verwijderd.
+message.deletesearch.success=Zoekopdracht is verwijderd.
 message.deletesearch.failure=Zoekopdracht kon niet worden verwijderd.
 
-label.searchtitle=Zoekopdracht
+label.searchtitle=Zoeken
 label.searchterm=Querytekst
-label.criteria=Criteria
+label.criteria=Criterium
 label.results=Resultaten
 label.insertfield=Veld invoegen
 label.select=Selecteren...
 label.insertdate=Datum invoegen
 
 label.records=Records weergeven (alleen afgeronde)
-label.undeclared=Inclusief Niet afgeronde
-label.vital=Alleen Vitaal weergeven
+label.undeclared=Inclusief niet-afgeronde
+label.vital=Alleen vitale weergeven
 label.recordFolders=Archiefmappen weergeven
 label.recordCategories=Recordcategorie\u00ebn weergeven
-label.frozen=Alleen bevroren weergeven (uitgesloten wanneer niet geselecteerd)
-label.cutoff=Alleen Afgesloten weergeven
+label.frozen=Alleen in wachtstand weergeven (uitgesloten wanneer niet geselecteerd)
+label.cutoff=Alleen afgesloten weergeven
 
 button.newsearch=Nieuwe zoekopdracht
 button.savesearch=Zoekopdracht opslaan...
 button.savedsearches=Opgeslagen zoekopdrachten
 button.deletesearch=Zoekopdracht verwijderen
-button.print=Printerlay-out
-button.screen=Schermlay-out
+button.print=Afdrukindeling
+button.screen=Schermindeling
 button.export=Exporteren
+button.add-to-hold=Toevoegen aan wachtstand
 
 # RM Results Common
 label.options=Resultaatopties
-label.metadata=Metadata
+label.metadata=Metagegevens
 label.order=Volgorde
-label.sortFirst=Eerst door
-label.sortNext=dan door
+label.sortFirst=Eerst op
+label.sortNext=dan op
 label.sortNone=(Geen)
 label.sortAscending=Oplopend
 label.sortDescending=Aflopend
-label.dueForReview=Gereed voor beoordeling
+label.dueForReview=Gereed voor revisie
 label.components=Onderdelen
-label.recordSeries=Record Series
+label.recordSeries=Recordreeks
 label.parentFolder=Bovenliggende map
 
 
@@ -55,10 +56,10 @@ label.parentFolder=Bovenliggende map
 label.dispositionEvents=Archiveringsgebeurtenissen
 label.dispositionActionName=Naam archiveringsactie
 label.dispositionActionAsOf=Begindatum archiveringsactie
-label.dispositionEventsEligible=In aanmerking komende archiveringsacties
-label.vitalRecordReviewPeriod=Beoordelingsperiode Vitaal Record
+label.dispositionEventsEligible=In aanmerking komende archiveringsgebeurtenissen
+label.vitalRecordReviewPeriod=Revisieperiode vitale record
 label.hasDispositionSchedule=Heeft bewaarschema
-label.dispositionPeriod=Bewaar- en vernietigingstermijn
-label.dispositionInstructions=Bewaar- en vernietigingsinstructies
-label.dispositionAuthority=Archiefautoriteit
+label.dispositionPeriod=Archiveringstermijn
+label.dispositionInstructions=Archiveringsinstructies
+label.dispositionAuthority=Archiveringsautoriteit
 label.holdReason=Reden van wachtstand
