--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_nl.properties
@@ -8,7 +8,7 @@ button.view-record=Record bekijken
 
 label.clear-log-title=Auditlog wissen?
 label.clear-log-confirmation=Weet u zeker dat u het auditlog wilt wissen?
-label.clearing-log-message=Een ogenblik geduld. Het auditlog wordt gewist.
+label.clearing-log-message=Een ogenblik geduld, het auditlog wordt gewist.
 label.cleared-log-message=Auditlog gewist.
 message.clear-log-fail = Fout bij wissen van auditlog.
 
@@ -22,7 +22,7 @@ message.stop-log-fail = Fout bij stoppen van auditlog.
 label.started-at=Auditlog gestart om {0}
 label.start-log-title=Auditlog starten?
 label.start-log-confirmation=Weet u zeker dat u het auditlog wilt starten?
-label.starting-log-message=Een ogenblik geduld. Het auditlog wordt gestart.
+label.starting-log-message=Een ogenblik geduld, het auditlog wordt gestart.
 label.started-log-message=Auditlog gestart.
 message.start-log-fail = Fout bij starten van auditlog.
 message.select-from-date=Begindatum selecteren
@@ -31,7 +31,7 @@ message.select-to-date=Einddatum selecteren
 label.button-clear=Wissen
 label.button-stop=Stoppen
 label.button-start=Starten
-label.button-view-log=Volledig log bekijken
+label.button-view-log=Volledig logboek bekijken
 label.button-specify=Specificeren
 label.button-export=Exporteren
 label.button-file-record=Archiveren als record
@@ -39,23 +39,23 @@ label.button-apply=Toepassen
 label.button-details=Details
 
 label.filed-log-message=Auditlog is gearchiveerd als een record.
-message.filing-log-fail=Fout bij archiveren van geschiedenis bijhouden als record.
+message.filing-log-fail=Fout bij archiveren van audit als record.
 label.file-record=Record archiveren
 
 label.timestamp=Tijdstempel
 label.user=Gebruiker
 label.role=Rol
 label.event=Gebeurtenis
-label.filter-log-title=Log filteren?
-label.filtering-log-message=Log wordt gefilterd
+label.filter-log-title=Logboek filteren?
+label.filtering-log-message=Logboek wordt gefilterd
 label.default-filter=Alle gebruikers
-label.pagination=Laatst {0} regels in log worden weergegeven
-label.show-log-for=Log weergeven voor:
+label.pagination=Laatst {0} regels in logboek worden weergegeven
+label.show-log-for=Logboek weergeven voor:
 label.all-users=Alle gebruikers
 label.remove-filter=Filter verwijderen
 label.default-message=Klik op 'Toepassen' om het auditlog weer te geven
 
-node.root=Selectielijst
+node.root=Ordeningsplan
 title.single=Locatie voor auditrecord selecteren
 
 label.header-users=Gebruikers
