--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_nl.properties
@@ -1,8 +1,8 @@
-label.custom-metadata-title=Aangepaste metadata
-label.create-metadata-title=Nieuwe metadata
-label.edit-metadata-title=Metadata-eigenschap bewerken
+label.custom-metadata-title=Aangepaste metagegevens
+label.create-metadata-title=Nieuwe metagegevens
+label.edit-metadata-title=Metagegevens-eigenschap bewerken
 label.list-title=Object
-label.custom-metadata=Aangepaste metadata
+label.custom-metadata=Aangepaste metagegevens
 label.selection-list=Selectielijst
 label.label=Label
 label.use-list=Selectielijst gebruiken
@@ -10,19 +10,19 @@ label.mandatory=Verplicht
 
 label.datatype.unknown=Onbekend
 label.datatype.text=Tekst
-label.datatype.boolean=Boolean
+label.datatype.boolean=Booleaans
 label.datatype.date=Datum
 
-message.getpropertiesfail=Kon definities van nieuwe eigenschap niet ophalen.
-message.noproperties=Geen nieuwe eigenschappen gedefinieerd.
-message.create-success=Nieuwe eigenschap met succes toegevoegd.
-message.create-failure=Kon nieuwe eigenschap niet toevoegen: {0}
-message.edit-success=Nieuwe eigenschap met succes opgeslagen.
-message.edit-failure=Kon nieuwe eigenschap niet opslaan: {0}
-message.delete.title=Nieuwe eigenschap verwijderen
+message.getpropertiesfail=Kon definities van aangepaste eigenschap niet ophalen.
+message.noproperties=Geen aangepaste eigenschappen gedefinieerd.
+message.create-success=Nieuwe aangepaste eigenschap toegevoegd.
+message.create-failure=Kon nieuwe aangepaste eigenschap niet toevoegen: {0}
+message.edit-success=Aangepaste eigenschap opgeslagen.
+message.edit-failure=Kon aangepaste eigenschap niet opslaan: {0}
+message.delete.title=Aangepaste eigenschap verwijderen
 message.delete.text=Weet u zeker dat u {0} wilt verwijderen?
-message.delete-success=Nieuwe eigenschap met succes verwijderd.
-message.delete-failure=Kon nieuwe eigenschap niet verwijderen: {0}
+message.delete-success=Aangepaste eigenschap verwijderd.
+message.delete-failure=Kon aangepaste eigenschap niet verwijderen: {0}
 
-mandatory.true=True
-mandatory.false=False
+mandatory.true=Waar
+mandatory.false=Onwaar
