--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_nl.properties
@@ -1,11 +1,11 @@
 message.get-roles-failure=Kon geen gebruikersrollen ophalen: {0}
-message.get-role-failure=Kon geen functies ophalen voor rol: {0}
-message.delete.success=De rol is met succes verwijderd.
+message.get-role-failure=Kon geen mogelijkheden ophalen voor rol: {0}
+message.delete.success=De rol is verwijderd.
 message.delete.failure=Kon de rol niet verwijderen.
-message.edit-success=De rol is met succes bijgewerkt.
+message.edit-success=De rol is bijgewerkt.
 message.edit-failure=Kon de rol niet bijwerken.
-message.create-success=De rol is met succes aangemaakt.
-message.create-failure=Kon de rol niet aanmaken.
+message.create-success=De rol is gemaakt.
+message.create-failure=Kon de rol niet maken.
 
 label.roles=Rollen
 label.select-all=Alles selecteren
@@ -16,12 +16,12 @@ label.edit-role=Rol bewerken
 label.delete-role=Rol verwijderen
 label.name=Naam
 
-label.capabilities=Functies
+label.capabilities=Mogelijkheden
 
-label.create=Aanmaken
-label.create-another=Aanmaken en nog een aanmaken
+label.create=Maken
+label.create-another=Maken en nog een maken
 label.cancel=Annuleren
 label.save=Opslaan
 
-label.confirm-delete-title=Bevestiging Rol verwijderen
+label.confirm-delete-title=Bevestiging van rol verwijderen
 label.confirm-delete-message=Weet u zeker dat u deze rol wilt verwijderen?
