--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_nl.properties
@@ -6,7 +6,7 @@ label.general=Algemeen
 label.type=Type
 label.bidirectional=Bidirectioneel
 label.label=Label
-label.parentchild=Bovenliggen/Onderliggend
+label.parentchild=Bovenliggend/onderliggend
 label.source=Bron
 label.target=Doel
 
@@ -15,7 +15,7 @@ button.newreference=Nieuwe relatie
 message.confirm.removereference.title=Relatie verwijderen
 message.confirm.removereference.text=Weet u zeker dat u ''{0}'' wilt verwijderen?
 message.confirm.removereference.text.parentchild=Weet u zeker dat u ''{0}, {1}'' wilt verwijderen?
-message.removereference-success=Verwijzing met succes verwijderd
+message.removereference-success=Verwijzing verwijderd
 message.removereference-failure=Kon relatie niet verwijderen.
 message.savingReference=Relatie opslaan...
 message.loadreference-failure=Kon de gegevens voor de relatie niet laden.
