--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-users-and-groups.get_nl.properties
@@ -10,19 +10,19 @@ message.get-roles-failure=Kon geen gebruikersrollen ophalen: {0}
 
 message.load-peopleFinder-failure=Kon onderdeel 'Medewerker zoeken' niet vinden
 message.load-groupFinder-failure=Kon onderdeel 'Groepen zoeken' niet vinden
-message.adduser-success=Gebruiker ''{0}'' is met succes toegevoegd.
+message.adduser-success=Gebruiker ''{0}'' is toegevoegd.
 message.adduser-failure=Kon gebruiker ''{0}'' niet toevoegen.
-message.addgroup-success=Groep ''{0}'' is met succes toegevoegd.
+message.addgroup-success=Groep ''{0}'' is toegevoegd.
 message.addgroup-failure=Kon groep ''{0}'' niet toevoegen.
 
 message.confirm.removeuser=Weet u zeker dat u ''{0}'' wilt verwijderen uit de rol?
 message.confirm.removeuser.title=Gebruiker uit rol verwijderen
-message.removeuser-success=Gebruiker ''{0}'' is met succes verwijderd.
+message.removeuser-success=Gebruiker ''{0}'' is verwijderd.
 message.removeuser-failure=Kon gebruiker ''{0}'' niet verwijderen.
 
 message.confirm.removegroup=Weet u zeker dat u ''{0}'' wilt verwijderen uit de rol?
 message.confirm.removegroup.title=Groep uit rol verwijderen
-message.removegroup-success=Groep ''{0}'' is met succes verwijderd.
+message.removegroup-success=Groep ''{0}'' is verwijderd.
 message.removegroup-failure=Kon groep ''{0}'' niet verwijderen.
 
 panel.adduser.header=Gebruiker toevoegen
