--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/edit-metadata/edit-metadata-mgr.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/edit-metadata/edit-metadata-mgr.get_nl.properties
@@ -1,3 +1,3 @@
-edit-metadata-mgr.heading=Metadata bewerken
+edit-metadata-mgr.heading=Metagegevens bewerken
 edit-metadata-mgr.button.save=Opslaan
-edit-metadata-mgr.update.failed=Kon metadata niet bijwerken.
+edit-metadata-mgr.update.failed=Kon metagegevens niet bijwerken.
