--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_nl.properties
@@ -4,16 +4,17 @@ header.events=Gebeurtenissen
 header.event=Gebeurtenis
 header.completion=Voltooiing gebeurtenis
 
-label.required.fields=Vereiste velden
+label.required.fields=Verplichte velden
 label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={0} na {1} {2}(s)
 label.title.new=Nieuwe stap
+label.ghostondestroy=Recordmetagegevens bewaren na verwijderen
 label.transferTo=Overzetten naar
-label.after=Naar een periode van
+label.after=Na een periode van
 label.from=van
 label.when=Wanneer gebeurtenis plaatsvindt
-label.description=Beschrijving van stappen
+label.description=Beschrijving van stap
 label.select.location=Locatie selecteren...
 
 icon.editaction=Bewerken
@@ -29,17 +30,17 @@ relation.option.or=Afhankelijk van welke gebeurtenis als eerste plaatsvindt
 relation.option.and=Wanneer alle gebeurtenissen hebben plaatsgevonden
 
 button.addevent=Gebeurtenis toevoegen
-button.createevent=Gebeurtenis aanmaken
+button.createevent=Gebeurtenis maken
 button.addaction=Stap toevoegen
 button.createaction=Stap toevoegen
 
 message.getActionFailure=Kon het bewaarschema niet ophalen
-message.savingAction=Stap opslaan
+message.savingAction=Stap wordt opgeslagen
 message.saveActionFailure=De stap kon niet worden opgeslagen
 title.deleteAction=Verwijderen
 label.confirmDeleteAction=Weet u zeker dat u de stap wilt verwijderen?
-message.deletingAction=Stap verwijderen
-message.deleteActionSuccess=Stap is met succes verwijderd
+message.deletingAction=Stap wordt verwijderd
+message.deleteActionSuccess=Stap is verwijderd
 message.deleteActionFailure=Kon stap niet verwijderen
 message.loadingSteps=Stappen laden...
-message.noSteps=Er bestaan geen stappen. Klik op Stap toevoegen om een stap aan te maken.
+message.noSteps=Er bestaan geen stappen. Klik op Stap toevoegen om een stap te maken.
