--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_nl.properties
@@ -1,11 +1,11 @@
 label.user=Gebruiker
 label.dateAndTime=Datum en tijd
 label.parentPath=Pad
-label.recordSeriesIdentifier=Identificatie Record Series
-label.recordCategoryIdentifier=Identificatie Recordcategorie
-label.recordFolderIdentifier=Identificatie Archiefmap
-label.vitalRecordIndicator=Vitaal Record indicator
-label.dispositionAuthority=Archiefautoriteit
+label.recordSeriesIdentifier=Identificatie recordreeks
+label.recordCategoryIdentifier=Identificatie recordcategorie
+label.recordFolderIdentifier=Identificatie archiefmap
+label.vitalRecordIndicator=Indicator vitale record
+label.dispositionAuthority=Archiveringsautoriteit
 label.noDispositionAuthority=Geen
 label.dispositionSchedule=Bewaarschema
 label.noActions=Geen stappen
