--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/folder-details/folder-actions.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/folder-details/folder-actions.get_nl.properties
@@ -1,4 +1,4 @@
 heading=Acties
 
 ## Pop-up Messages
-message.error=Kon de selectielijst niet openen
+message.error=Kon het ordeningsplan niet openen
