--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_nl.properties
@@ -1,10 +1,10 @@
 label.title-new-reference = Nieuwe verwijzing
 label.select = Selecteren
-label.record-link = Koppeling naar record
+label.record-link = Koppelen naar record
 label.record-rel = Relatie
 label.name = Naam verwijzing
 label.required = Verplicht veld
-label.create=Aanmaken
+label.create=Maken
 label.cancel=Annuleren
-label.fileplan= Selectielijst
-message.createfail=Kon geen nieuwe verwijzing aanmaken
+label.fileplan= Ordeningsplan
+message.createfail=Kon geen nieuwe verwijzing maken
