--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_nl.properties
@@ -1,5 +1,4 @@
 header.action=Actie uitvoeren:
-button.freeze=Bevriezen...
 button.reject=Afwijzen...
 button.requestInfo=Informatie aanvragen...
 button.select-folder=Selecteren...
@@ -8,7 +7,7 @@ button.addRecordTypes=Recordtypes...
 menu.item.select=Selecteren...
 
 label.setProperty.property=Eigenschap instellen:
-label.setProperty.value=aan:
+label.setProperty.value=op:
 
 dialog.destination.title=Doelmap selecteren
 
@@ -22,17 +21,17 @@ form.control.date-picker.display.date.format=DD-MM-JJJJ
 form.control.date-picker.entry.time.format=UU:mm
 form.control.date-picker.display.time.format=UU:MM (24 uur)
 
-record.folder.path.title=Klik om de helptekst weer te geven voor het veld van pad van de archiefmap.
-record.folder.path.help=<p>De volgende vervangingen zijn toegestaan:</p>\
+record.folder.path.title=Klik om de helptekst weer te geven voor het veld archiefmappad.
+record.folder.path.help=<p>De volgende substituties zijn toegestaan:</p>\
    <p></p>\
-   <p>date.day.short = Sun</p>\
-   <p>date.day = Sun</p>\
-   <p>date.day.long = Sunday</p>\
+   <p>date.day.short = Zon</p>\
+   <p>date.day = Zon</p>\
+   <p>date.day.long = Zondag</p>\
    <p>date.day.number = 7 (1-7)</p>\
    <p>date.day.year = 216 (001-365)</p>\
    <p>date.month.short = Aug</p>\
    <p>date.month = Aug</p>\
-   <p>date.month.long = August</p>\
+   <p>date.month.long = Augustus</p>\
    <p>date.month.number = 08 (01-12)</p>\
    <p>date.year.short = 13</p>\
    <p>date.year = 13</p>\
