--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_nl.properties
@@ -1,5 +1,5 @@
 label.disabled=Actief
-label.executeAsynchronously=Op achtergrond uitvoeren
+label.executeAsynchronously=Uitvoeren op de achtergrond
 label.applyToChildren=Regel toegepast op submappen
 label.and=Aan alle criteria is voldaan
 label.or=Aan een of meer criteria is voldaan
@@ -11,4 +11,4 @@ message.getRuleFailure=Kon regelinformatie niet laden
 message.deletingRule=Regel verwijderen...   
 message.confirm.delete.title=Regel verwijderen
 message.confirm.delete=Weet u zeker dat u de regel wilt verwijderen?
-message.loading=De selectielijst laden...
+message.loading=Het ordeningsplan laden...
