--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/dnd-upload.get_nl.properties
@@ -8,16 +8,16 @@ label.noFiles=Bestanden worden in geheugen geladen. Een ogenblik geduld...
 label.documents=Documenten
 label.success=Geslaagd
 label.failure=Fout: {0}
-label.failure.413=Mislukt: quota overschreden
-label.failure.409=Mislukt: fout in grootte van content
+label.failure.413=Mislukt: quotum overschreden
+label.failure.409=Mislukt: fout in grootte van inhoud
 label.failure.fileTooBig=Mislukt: bestand groter dan 25 MB
-label.uploadStatus={0} van {1} bestanden voltooid
-label.uploadStatus.withFailures={0} van {1} bestanden voltooid ({2} mislukt)
+label.uploadStatus={0} van {1} bestanden afgerond
+label.uploadStatus.withFailures={0} van {1} bestanden afgerond ({2} mislukt)
 label.aggregateUploadStatus=Bezig met uploaden van {0} bestanden ({1})
 message.cancelStatus=Upload(s) geannuleerd; {0} bestand(en) ge\u00fcpload
-message.zeroByteFileSelected=Bestand {0} heeft een grootte van 0 bytes en kan niet worden ge\u00fcpload.
+message.zeroByteFileSelected=Bestand {0} heeft een grootte van 0b en kan niet worden ge\u00fcpload.
 message.zeroByteFiles=De volgende objecten kunnen niet worden ge\u00fcpload omdat het mappen zijn of omdat ze een grootte hebben van nul bytes: {0}
-message.illegalCharacters=Bestand {0} bevat tekens die op een bepaald besturingssysteem niet toegestaan zijn.
+message.illegalCharacters=Bestand {0} bevat tekens die op sommige besturingssystemen niet toegestaan zijn.
 message.maxFileFileSizeExceeded=Bestand {0} is te groot ({1}), maximale bestandsgrootte {2}.
 
 #button.selectFiles=Select files to upload
