--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_nl.properties
@@ -3,14 +3,14 @@ header.multiUpload=Bestand(en) uploaden
 header.singleUpdate=Bestand bijwerken
 header.singleImport=Importeren
 
-section.recordType=Recordtype selecteren
-section.file=Bestand(en) selecteren
+section.recordType=Recordtype kiezen
+section.file=Bestand(en) kiezen
 
 label.browse=Selecteer een of meer bestanden om te uploaden
 label.multiUploadTip=Gebruik CTRL of SHIFT om meerdere bestanden te selecteren
 label.singleUpdateTip=Klik op pictogram om een nieuwe versie van {0} te uploaden
 label.noFiles=Geen bestanden om weer te geven, klik op pictogram om een of meer bestanden te selecteren om te uploaden
-label.noFlash=Flash Player versie 9.0.45 of later vereist voor gebruik van dit onderdeel. U kunt de laatste versie van Flash Player downloaden via het \
+label.noFlash=Flash Player versie 9.0.45 of later vereist voor gebruik van dit onderdeel. U kunt de laatste versie van Flash Player downloaden uit het \
   <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player Download Center</a>.
 label.success=Geslaagd
 label.failure=Mislukt
@@ -27,9 +27,9 @@ label.minorVersion=Secundaire versie
 label.majorVersion=Primaire versie
 label.comments=Opmerkingen
 
-label.contentType=Type content
+label.contentType=Contenttype
 type.cm_content=Content
 
 label.recordType=Recordtype(s)
 label.recordType.description=Opmerking: alle vermelde bestanden worden gemarkeerd als de geselecteerde type(s).
-recordType.default=Standaard
+recordType.default=Standaardwaarde
