--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_nl.properties
@@ -2,11 +2,11 @@ header.singleUpload=Bestand uploaden
 header.singleUpdate=Bestand bijwerken
 header.singleImport=Importeren
 
-section.recordType=Recordtype selecteren
+section.recordType=Recordtype kiezen
 section.file=Bestand kiezen
 
 label.singleUploadTip=Wanneer u de nieuwste Flash Player hebt ge\u00efnstalleerd, kunt u meerdere bestanden uploaden. \
-Download deze via het <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player Download Center</a>.
+  Download deze uit het <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player Download Center</a>.
 
 label.singleUpdateTip=Een nieuwe versie van {0} uploaden
 button.upload=Bestand uploaden
@@ -19,11 +19,11 @@ label.majorVersion=Primaire versie
 label.comments=Opmerkingen
 
 message.uploading=Document wordt ge\u00fcpload...
-message.success=Document is met succes ge\u00fcpload
+message.success=Document is ge\u00fcpload
 message.failure=Document kon niet worden ge\u00fcpload
 
-label.contentType=Type content
+label.contentType=Contenttype
 type.cm_content=Content
 
 label.recordType=Recordtype(s)
-recordType.default=Standaard
+recordType.default=Standaardwaarde
