--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_nl.properties
@@ -2,41 +2,45 @@
 header=De doelmap selecteren
 
 ## Copy To
-copy.node.root=Selectielijst
+copy.node.root=Ordeningsplan
+copy.node.unfiledroot=Niet-gearchiveerde records
 copy.title.single={0} kopi\u00ebren naar...
-copy.title.multi={0} Items kopi\u00ebren naar...
+copy.title.multi={0} onderdelen kopi\u00ebren naar...
 copy.button=Kopi\u00ebren
 copy.message.no-files=Er moet minstens \u00e9\u00e9n bestand worden verstrekt
 copy.message.please-wait=Bestanden worden gekopieerd...
-copy.message.success={0} items met succes gekopieerd
-copy.message.failure=Kon de items niet kopi\u00ebren
+copy.message.success={0} onderdelen gekopieerd
+copy.message.failure=Kon de onderdelen niet kopi\u00ebren
 
 ## Move To
-move.node.root=Selectielijst
+move.node.root=Ordeningsplan
+move.node.unfiledroot=Niet-gearchiveerde records
 move.title.single={0} verplaatsen naar...
-move.title.multi={0} Items verplaatsen naar...
+move.title.multi={0} onderdelen verplaatsen naar...
 move.button=Verplaatsen
 move.message.no-files=Er moet minstens \u00e9\u00e9n bestand worden verstrekt
 move.message.please-wait=Bestanden worden verplaatst...
-move.message.success={0} items met succes verplaatst
-move.message.failure=Kon de items niet verplaatsen
+move.message.success={0} onderdelen verplaatst
+move.message.failure=Kon de onderdelen niet verplaatsen
 
 ## Link To
-link.node.root=Selectielijst
+link.node.root=Ordeningsplan
+link.node.unfiledroot=Niet-gearchiveerde records
 link.title.single={0} koppelen aan...
-link.title.multi={0} items koppelen aan...
-link.button=Koppelen
+link.title.multi={0} onderdelen koppelen aan...
+link.button=Koppeling
 link.message.no-files=Er moet minstens \u00e9\u00e9n bestand worden verstrekt
-link.message.please-wait=Bestand worden gekoppeld...
-link.message.success={0} items met succes gekoppeld
-link.message.failure=Kon de items niet koppelen
+link.message.please-wait=Bestanden worden gekoppeld...
+link.message.success={0} onderdelen gekoppeld
+link.message.failure=Kon de onderdelen niet koppelen
 
 ## File To
-file.node.root=Selectielijst
+file.node.root=Ordeningsplan
+file.node.unfiledroot=Niet-gearchiveerde records
 file.title.single={0} archiveren naar...
-file.title.multi={0} items archiveren naar...
-file.button=Bestand
+file.title.multi={0} onderdelen archiveren naar...
+file.button=Archiveren
 file.message.no-files=Er moet minstens \u00e9\u00e9n bestand worden verstrekt
 file.message.please-wait=Bestanden worden gearchiveerd...
-file.message.success={0} items met succes gearchiveerd
-file.message.failure=Kon de items niet archiveren
+file.message.success={0} onderdelen gearchiveerd
+file.message.failure=Kon de onderdelen niet archiveren
