--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/export.get_nl.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/export.get_nl.properties
@@ -1,4 +1,4 @@
 header=Exporteren
 label.transferFormat=Selecteer de bestandsindeling voor de export:
-label.acp=Alfresco Content pakket (ACP)
+label.acp=Alfresco Content Package (ACP)
 label.zip=ZIP
