SIMP CHINESE: Simplified Chinese RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73660 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_zh_CN.properties
@@ -15,7 +15,7 @@ button.newreference=\u65b0\u5efa\u5173\u7cfb
 message.confirm.removereference.title=\u5220\u9664\u5173\u7cfb
 message.confirm.removereference.text=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{0}''\uff1f
 message.confirm.removereference.text.parentchild=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{0}''\u3001''{1}''\uff1f
-message.removereference-success=\u5df2\u6210\u529f\u5220\u9664\u5f15\u7528\u3002
+message.removereference-success=\u5df2\u6210\u529f\u5220\u9664\u53c2\u8003\u3002
 message.removereference-failure=\u65e0\u6cd5\u5220\u9664\u5173\u7cfb\u3002
 message.savingReference=\u6b63\u5728\u4fdd\u5b58\u5173\u7cfb...
 message.loadreference-failure=\u65e0\u6cd5\u52a0\u8f7d\u5173\u7cfb\u7684\u6570\u636e\u3002
