--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_zh_CN.properties
@@ -9,7 +9,8 @@ label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={1} {2} \u540e {0}
 label.title.new=\u65b0\u6b65\u9aa4
-label.transferTo=\u8f6c\u79fb\u5230
+label.ghostondestroy=\u5220\u9664\u540e\u7ef4\u62a4\u8bb0\u5f55\u5143\u6570\u636e
+label.transferTo=\u79fb\u4ea4\u5230
 label.after=\u5728\u8be5\u65f6\u95f4\u540e
 label.from=\u4ece
 label.when=\u53d1\u751f\u4e8b\u4ef6\u65f6
@@ -42,4 +43,4 @@ message.deletingAction=\u6b63\u5728\u5220\u9664\u6b65\u9aa4
 message.deleteActionSuccess=\u5df2\u6210\u529f\u5220\u9664\u6b65\u9aa4
 message.deleteActionFailure=\u65e0\u6cd5\u5220\u9664\u6b65\u9aa4
 message.loadingSteps=\u6b63\u5728\u52a0\u8f7d\u6b65\u9aa4...
-message.noSteps=\u4e0d\u5b58\u5728\u6b65\u9aa4\u3002 \u5355\u51fb\u201c\u6dfb\u52a0\u6b65\u9aa4\u201d\u6765\u521b\u5efa\u6b65\u9aa4\u3002
+message.noSteps=\u4e0d\u5b58\u5728\u6b65\u9aa4\u3002\u5355\u51fb\u201c\u6dfb\u52a0\u6b65\u9aa4\u201d\u6765\u521b\u5efa\u6b65\u9aa4\u3002
