--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_zh_CN.properties
@@ -3,7 +3,7 @@ disposition-schedule.heading=\u5904\u7f6e\u8ba1\u5212
 title.properties=\u5e38\u89c4
 title.actions=\u5904\u7f6e\u6b65\u9aa4
 
-label.dispositionAuthority=\u5904\u7f6e\u673a\u6784
+label.dispositionAuthority=\u5904\u7f6e\u5f53\u5c40
 label.dispositionInstructions=\u5904\u7f6e\u8bf4\u660e
 label.appliedTo=\u9002\u7528\u4e8e
 label.appliedTo.record=\u8bb0\u5f55
