--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-details.get_zh_CN.properties
@@ -11,4 +11,4 @@ message.getRuleFailure=\u65e0\u6cd5\u52a0\u8f7d\u89c4\u5219\u4fe1\u606f
 message.deletingRule=\u6b63\u5728\u5220\u9664\u89c4\u5219...   
 message.confirm.delete.title=\u5220\u9664\u89c4\u5219
 message.confirm.delete=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\u6b64\u89c4\u5219\uff1f
-message.loading=\u6b63\u5728\u52a0\u8f7d\u6587\u4ef6\u8ba1\u5212...
+message.loading=\u6b63\u5728\u52a0\u8f7d\u5f52\u7c7b\u65b9\u6848...
