--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rule-edit.get_zh_CN.properties
@@ -21,4 +21,4 @@ message.creating=\u6b63\u5728\u521b\u5efa\u89c4\u5219...
 message.updating=\u6b63\u5728\u66f4\u65b0\u89c4\u5219...
 message.persist-failure=\u65e0\u6cd5\u4fdd\u7559\u89c4\u5219
 message.createAnotherRule=\u5df2\u6210\u529f\u521b\u5efa\u89c4\u5219 
-message.loading=\u6b63\u5728\u52a0\u8f7d\u6587\u4ef6\u8ba1\u5212...
+message.loading=\u6b63\u5728\u52a0\u8f7d\u5f52\u7c7b\u65b9\u6848...
