--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_zh_CN.properties
@@ -12,4 +12,4 @@ message.getRules-failure=\u65e0\u6cd5\u52a0\u8f7d\u89c4\u5219
 message.runningRules=\u6b63\u5728\u8fd0\u884c\u89c4\u5219...
 message.runRules-success=\u6210\u529f\u8fd0\u884c\u89c4\u5219
 message.runRules-failure=\u65e0\u6cd5\u8fd0\u884c\u89c4\u5219
-filePlan.label = \u6587\u4ef6\u8ba1\u5212
+filePlan.label = \u5f52\u7c7b\u65b9\u6848
