--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -1,18 +1,18 @@
 ## Records Management Messages
 
 ## Page titles
-page.rmDocumentLibrary.title=\u6587\u4ef6\u8ba1\u5212
-page.rmDocumentLibrary.description=\u8bb0\u5f55\u7ba1\u7406\u6587\u4ef6\u8ba1\u5212
+page.rmDocumentLibrary.title=\u5f52\u7c7b\u65b9\u6848
+page.rmDocumentLibrary.description=\u8bb0\u5f55\u7ba1\u7406\u5f52\u7c7b\u65b9\u6848
 page.rmSearch.title=\u8bb0\u5f55\u641c\u7d22
 page.rmSearch.description=\u8bb0\u5f55\u641c\u7d22\u9875\u9762
 page.rmSiteDashboard.title=\u8bb0\u5f55\u7ba1\u7406\u7ad9\u70b9\u4eea\u8868\u677f
 page.rmSiteDashboard.description=\u8bb0\u5f55\u7ba1\u7406\u7ad9\u70b9\u4eea\u8868\u677f\u9875\u9762
-page.rmAudit.title=\u5ba1\u6838\u65e5\u5fd7
-page.rmAudit.description=\u5ba1\u6838\u65e5\u5fd7\u9875\u9762
-page.rmNewReference.title=\u65b0\u5f15\u7528
-page.rmNewReference.description=\u8bb0\u5f55\u4e4b\u95f4\u7684\u65b0\u5f15\u7528
-page.rmDispositionEdit.title=\u7f16\u8f91\u5904\u7f6e\u8ba1\u5212
-page.rmDispositionEdit.description=\u7528\u4e8e\u7f16\u8f91\u5904\u7f6e\u8ba1\u5212\u7684\u9875\u9762
+page.rmAudit.title=\u5ba1\u8ba1\u65e5\u5fd7
+page.rmAudit.description=\u5ba1\u8ba1\u65e5\u5fd7\u9875\u9762
+page.rmNewReference.title=\u65b0\u53c2\u8003
+page.rmNewReference.description=\u8bb0\u5f55\u4e4b\u95f4\u7684\u65b0\u53c2\u8003
+page.rmDispositionEdit.title=\u7f16\u8f91\u5904\u7f6e\u8868
+page.rmDispositionEdit.description=\u7528\u4e8e\u7f16\u8f91\u5904\u7f6e\u8868\u7684\u9875\u9762
 page.rmPermissions.title=\u7ba1\u7406\u6743\u9650
 page.rmPermissions.description=\u7528\u4e8e\u7ba1\u7406\u6743\u9650\u7684\u9875\u9762
 page.rmConsole.title=\u8bb0\u5f55\u7ba1\u7406\u63a7\u5236\u53f0
@@ -32,10 +32,11 @@ label.set.general=\u5e38\u89c4
 label.set.record=\u8bb0\u5f55
 label.set.correspondence=\u901a\u4fe1
 label.set.security=\u5b89\u5168\u6027
-label.set.vitalRecord=\u91cd\u8981\u8bb0\u5f55
+label.set.vitalRecord=\u6838\u5fc3\u8bb0\u5f55
 label.set.disposition=\u5904\u7f6e\u8ba1\u5212
 label.set.customMetadata=\u81ea\u5b9a\u4e49\u5c5e\u6027
-
+label.hold.reason=\u539f\u56e0
+label.hold.delete.empty=\u7a7a\u65f6\u5220\u9664\u4fdd\u5b58
 label.recordLevelDisposition=\u9002\u7528\u4e8e
 label.record=\u8bb0\u5f55
 label.folder=\u8bb0\u5f55\u6587\u4ef6\u5939
@@ -63,11 +64,10 @@ label.menu.imap=IMAP
 label.menu.custom=\u81ea\u5b9a\u4e49\u5c5e\u6027
 
 ## Buttons
-button.freeze.record=\u51bb\u7ed3\u8bb0\u5f55
 button.reject.record=\u62d2\u7edd\u8bb0\u5f55
 button.request-info=\u8bf7\u6c42\u4fe1\u606f
 
-## Pop-up Messages
+##\ufffdPop-up Messages
 message.confirm.delete.title=\u5220\u9664\u786e\u8ba4
 message.confirm.delete=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664 ''{0}''\uff1f
 message.confirm.destroy.title=\u9500\u6bc1\u786e\u8ba4
@@ -90,7 +90,7 @@ message.request-info-failure=\u5728\u8bf7\u6c42\u4fe1\u606f\u65f6\u51fa\u9519
 message.admin-console-access-denied=\u8981\u8bbf\u95ee\u8be5\u9875\u9762\uff0c\u60a8\u9700\u8981\u989d\u5916\u7684\u6743\u9650\u3002
 
 # Document path
-path.fileplan=\u6587\u4ef6\u8ba1\u5212
+path.fileplan=\u5f52\u7c7b\u65b9\u6848
 
 ## File Plan Actions
 actions.more=\u66f4\u591a...
@@ -105,37 +105,39 @@ actions.download=\u4e0b\u8f7d
 actions.download-zip=\u4e0b\u8f7d Zip
 actions.edit-details=\u7f16\u8f91\u5143\u6570\u636e
 actions.edit-disposition-as-of-date=\u7f16\u8f91\u5904\u7f6e\u65e5\u671f
-actions.edit-disposition-schedule=\u7f16\u8f91\u5904\u7f6e\u8ba1\u5212
-actions.edit-reason=\u7f16\u8f91\u4fdd\u6301\u8be6\u7ec6\u4fe1\u606f
+actions.edit-disposition-schedule=\u7f16\u8f91\u5904\u7f6e\u8868
+actions.edit-reason=\u7f16\u8f91\u4fdd\u5b58\u8be6\u7ec6\u4fe1\u606f
 actions.edit-review-as-of-date=\u7f16\u8f91\u5ba1\u67e5\u65e5\u671f
 actions.file-report=\u6587\u4ef6\u62a5\u544a
 actions.link-to=\u94fe\u63a5\u5230...
-actions.file-to=\u5b58\u6863\u81f3...
-actions.freeze=\u51bb\u7ed3
+actions.file-to=\u5f52\u6863\u81f3...
 actions.manage-permissions=\u7ba1\u7406\u6743\u9650
 actions.move-to=\u79fb\u52a8\u5230...
 actions.open-folder=\u91cd\u65b0\u6253\u5f00\u6587\u4ef6\u5939
-actions.relinquish=\u89e3\u9664\u4fdd\u6301
+actions.relinquish=\u89e3\u9664\u4fdd\u5b58
 actions.review-all=\u5ba1\u67e5\u5168\u90e8
 actions.reviewed=\u5df2\u5ba1\u67e5
 actions.add-record-metadata=\u6dfb\u52a0\u8bb0\u5f55\u5143\u6570\u636e
 actions.split-email=\u62c6\u5206\u7535\u5b50\u90ae\u4ef6\u9644\u4ef6
-actions.transfer=\u8f6c\u79fb
-actions.transfer-complete=\u5b8c\u6210\u8f6c\u79fb
+actions.transfer=\u79fb\u4ea4
+actions.transfer-complete=\u5b8c\u6210\u79fb\u4ea4
 actions.undeclare=\u91cd\u65b0\u6253\u5f00\u8bb0\u5f55
-actions.undo-cutoff=\u53d6\u6d88\u4e2d\u65ad
-actions.unfreeze=\u53d6\u6d88\u51bb\u7ed3
-actions.unfreeze-all=\u53d6\u6d88\u51bb\u7ed3\u5168\u90e8
+actions.undo-cutoff=\u64a4\u6d88\u4e2d\u65ad
 actions.create-disposition-schedule=\u521b\u5efa\u5904\u7f6e\u8ba1\u5212
 actions.upload-new-version=\u4e0a\u4f20\u65b0\u7248\u672c
 actions.view-details=\u67e5\u770b\u8be6\u7ec6\u4fe1\u606f
-actions.view-audit-log=\u67e5\u770b\u5ba1\u6838\u65e5\u5fd7
+actions.view-audit-log=\u67e5\u770b\u5ba1\u8ba1\u65e5\u5fd7
 actions.create-record=\u58f0\u660e\u4e3a\u8bb0\u5f55
 actions.hide-record=\u9690\u85cf\u8bb0\u5f55
 actions.reject=\u62d2\u7edd
 actions.request-info=\u8bf7\u6c42\u4fe1\u606f
 actions.file-destruction-report=\u751f\u6210\u9500\u6bc1\u62a5\u544a
 actions.end-retention=\u7ed3\u675f\u4fdd\u7559
+action.edit.hold=\u7f16\u8f91\u4fdd\u5b58
+actions.delete.hold=\u5220\u9664\u4fdd\u5b58
+actions.add-to-hold=\u6dfb\u52a0\u5230\u4fdd\u5b58
+actions.remove-from-hold=\u89e3\u9664\u4fdd\u5b58
+actions.file-hold-report=\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u4e2a\u6240\u9009\u9879\u76ee
@@ -158,20 +160,16 @@ message.edit-disposition-as-of-date.title=\u7f16\u8f91\u5904\u7f6e\u65e5\u671f
 message.edit-disposition-as-of-date.failure=\u65e0\u6cd5\u66f4\u65b0\u5904\u7f6e\u622a\u6b62\u65e5\u671f
 message.edit-disposition-as-of-date.success=\u5df2\u6210\u529f\u66f4\u65b0 ''{0}'' \u7684\u5904\u7f6e\u622a\u6b62\u65e5\u671f
 message.edit-hold.reason.label=\u539f\u56e0\uff1a
-message.edit-hold.title=\u66f4\u65b0\u4fdd\u6301\u8be6\u7ec6\u4fe1\u606f
-message.edit-hold.failure=\u65e0\u6cd5\u66f4\u65b0\u4fdd\u6301\u8be6\u7ec6\u4fe1\u606f
-message.edit-hold.success=\u5df2\u6210\u529f\u66f4\u65b0\u4fdd\u6301
+message.edit-hold.title=\u66f4\u65b0\u4fdd\u5b58\u8be6\u7ec6\u4fe1\u606f
+message.edit-hold.failure=\u65e0\u6cd5\u66f4\u65b0\u4fdd\u5b58\u8be6\u7ec6\u4fe1\u606f
+message.edit-hold.success=\u5df2\u6210\u529f\u66f4\u65b0\u4fdd\u5b58
 message.edit-review-as-of-date.title=\u7f16\u8f91\u5ba1\u67e5\u65e5\u671f
 message.edit-review-as-of-date.failure=\u65e0\u6cd5\u66f4\u65b0\u5ba1\u67e5\u622a\u6b62\u65e5\u671f
 message.edit-review-as-of-date.success=\u5df2\u6210\u529f\u66f4\u65b0 ''{0}'' \u7684\u5ba1\u67e5\u622a\u6b62\u65e5\u671f
-message.freeze.reason=\u539f\u56e0\uff1a
-message.freeze.title=\u51bb\u7ed3\u539f\u56e0
-message.freeze.failure=\u65e0\u6cd5\u51bb\u7ed3 ''{0}''
-message.freeze.success=''{0}'' \u73b0\u5728\u5df2\u51bb\u7ed3
 message.open-folder.failure=\u65e0\u6cd5\u6253\u5f00\u8bb0\u5f55\u6587\u4ef6\u5939 ''{0}''
 message.open-folder.success=\u8bb0\u5f55\u6587\u4ef6\u5939 ''{0}'' \u5df2\u6253\u5f00
-message.relinquish.failure=\u65e0\u6cd5\u89e3\u9664\u4fdd\u6301
-message.relinquish.success=\u4fdd\u6301\u5df2\u89e3\u9664
+message.relinquish.failure=\u65e0\u6cd5\u89e3\u9664\u4fdd\u5b58
+message.relinquish.success=\u4fdd\u5b58\u5df2\u89e3\u9664
 message.review-all.failure=\u65e0\u6cd5\u5ba1\u67e5\u6587\u4ef6\u5939 ''{0}'' \u4e2d\u7684\u8bb0\u5f55
 message.review-all.success=\u5df2\u7ecf\u5ba1\u67e5\u6587\u4ef6\u5939 ''{0}'' \u4e2d\u7684\u8bb0\u5f55
 message.reviewed.failure=\u65e0\u6cd5\u5ba1\u67e5 ''{0}''
@@ -184,14 +182,10 @@ message.transfer-complete.failure=\u65e0\u6cd5\u5b8c\u6210 ''{0}'' \u7684\u8f6c\
 message.transfer-complete.success=''{0}'' \u8f6c\u79fb\u5df2\u5b8c\u6210
 message.undeclare.failure=\u65e0\u6cd5\u91cd\u65b0\u6253\u5f00 ''{0}''
 message.undeclare.success=''{0}'' \u4e0d\u518d\u662f\u5b8c\u6574\u8bb0\u5f55
-message.undo-cutoff.failure=\u65e0\u6cd5\u64a4\u9500 ''{0}'' \u7684\u4e2d\u65ad
-message.undo-cutoff.success=\u64a4\u9500\u5bf9 ''{0}'' \u7684\u4e2d\u65ad
-message.unfreeze.failure=\u65e0\u6cd5\u53d6\u6d88\u51bb\u7ed3 ''{0}''
-message.unfreeze.success=\u5df2\u6210\u529f\u53d6\u6d88\u51bb\u7ed3 ''{0}''
-message.unfreeze-all.failure=\u65e0\u6cd5\u53d6\u6d88\u51bb\u7ed3\u4fdd\u6301 ''{0}'' \u7684\u5185\u5bb9
-message.unfreeze-all.success=\u73b0\u5df2\u53d6\u6d88\u51bb\u7ed3\u4fdd\u6301 ''{0}'' \u7684\u5185\u5bb9
-message.create-disposition-schedule.failure=\u65e0\u6cd5\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8ba1\u5212
-message.create-disposition-schedule.success=\u5df2\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8ba1\u5212
+message.undo-cutoff.failure=\u65e0\u6cd5\u64a4\u6d88 ''{0}'' \u7684\u4e2d\u65ad
+message.undo-cutoff.success=\u64a4\u6d88 ''{0}'' \u4e0a\u7684\u4e2d\u65ad
+message.create-disposition-schedule.failure=\u65e0\u6cd5\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8868
+message.create-disposition-schedule.success=\u5df2\u521b\u5efa ''{0}'' \u7684\u5904\u7f6e\u8868
 message.create-record.success=\u5df2\u6210\u529f\u58f0\u660e\u4e3a\u8bb0\u5f55
 message.create-record.failure=\u65e0\u6cd5\u58f0\u660e\u4e3a\u8bb0\u5f55
 message.hide-record.success=\u8bb0\u5f55\u5df2\u9690\u85cf
@@ -204,7 +198,10 @@ message.file-destruction-report.failure=\u65e0\u6cd5\u751f\u6210\u9500\u6bc1\u62
 message.file-destruction-report.success=\u5df2\u751f\u6210\u9500\u6bc1\u62a5\u544a
 message.end-retention.failure=\u65e0\u6cd5\u7ed3\u675f\u4fdd\u7559
 message.end-retention.success=\u4fdd\u7559\u5df2\u7ed3\u675f
-
+message.file-success=\u5df2\u6210\u529f\u5c06\u8f6c\u79fb\u62a5\u544a\u5f52\u6863\u4e3a ''{0}''
+message.file-failure=\u65e0\u6cd5\u5b8c\u6210\u5f52\u6863\u64cd\u4f5c
+message.file-hold-report.failure=\u65e0\u6cd5\u751f\u6210\u4fdd\u5b58\u62a5\u544a
+message.file-hold-report.success=\u5df2\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 
 ## File Plan Status Indicators
 status.rm-accession=\u52a0\u5165\u6302\u8d77
@@ -213,20 +210,21 @@ status.rm-closed=\u5df2\u5173\u95ed
 status.rm-cutoff=\u4e2d\u65ad
 status.rm-cutoff-folder=\u4e2d\u65ad
 status.rm-destroyed=\u5df2\u9500\u6bc1
-status.rm-frozen=\u5df2\u51bb\u7ed3
+status.rm-frozen=\u4fdd\u5b58\u4e2d
 status.rm-multi-parent=\u5728\u591a\u4e2a\u8bb0\u5f55\u6587\u4ef6\u5939\u4e2d\u94fe\u63a5
 status.rm-open=\u6253\u5f00
-status.rm-transfer=\u8f6c\u79fb\u6302\u8d77
-status.rm-transferred=\u5df2\u8f6c\u79fb
-status.rm-vital-record=\u91cd\u8981\u8bb0\u5f55
+status.rm-transfer=\u79fb\u4ea4\u6302\u8d77
+status.rm-transferred=\u5df2\u79fb\u4ea4
+status.rm-vital-record=\u6838\u5fc3\u8bb0\u5f55
 status.rm-rejected-record=\u5df2\u62d2\u7edd
 status.rm-info-requested=\u5df2\u8bf7\u6c42\u4fe1\u606f
-status.rm-disposition-schedule=\u8bb0\u5f55\u7c7b\u522b\u5df2\u5b9a\u4e49\u5904\u7f6e\u8ba1\u5212
+status.rm-disposition-schedule=\u8bb0\u5f55\u7c7b\u522b\u5df2\u5b9a\u4e49\u5904\u7f6e\u8868
 status.rm-digital-photograph-record=\u6570\u7801\u7167\u7247\u8bb0\u5f55
-status.rm-pdf-record=Pdf \u8bb0\u5f55
+status.rm-pdf-record=PDF \u8bb0\u5f55
 status.rm-scanned-record=\u626b\u63cf\u7684\u8bb0\u5f55
 status.rm-web-record=Web \u8bb0\u5f55
 status.rm-is-record=\u8bb0\u5f55
+status.rules=\u5df2\u7ecf\u4e3a\u6587\u4ef6\u5939\u5e94\u7528\u4e86\u89c4\u5219
 # Exif
 status.exif=EXIF \u5143\u6570\u636e\u53ef\u7528
 
@@ -234,15 +232,15 @@ status.exif=EXIF \u5143\u6570\u636e\u53ef\u7528
 label.all=\u5168\u90e8
 label.keywords=\u5173\u952e\u5b57\uff08\u6587\u672c\u548c\u540d\u79f0\uff09
 label.identifier=\u6807\u8bc6\u7b26
-label.dateFiled=\u5b58\u6863\u65e5\u671f
+label.dateFiled=\u7acb\u5377\u65e5\u671f
 label.publicationDate=\u53d1\u5e03\u65e5\u671f
 label.originator=\u5efa\u7acb\u8005
-label.originatingOrganization=\u5efa\u7acb\u7ec4\u7ec7
+label.originatingOrganization=\u8d77\u59cb\u7ec4\u7ec7
 label.mediaType=\u5a92\u4f53\u7c7b\u578b
 label.format=\u683c\u5f0f
 label.dateReceived=\u63a5\u6536\u65e5\u671f
 label.supplementalMarkingList=\u8865\u5145\u6807\u8bb0\u5217\u8868
-label.vitalRecord=\u91cd\u8981\u8bb0\u5f55
+label.vitalRecord=\u6838\u5fc3\u8bb0\u5f55
 label.reviewDate=\u5ba1\u67e5\u65e5\u671f
 label.address=\u6536\u4ef6\u4eba
 label.otherAddress=\u5176\u4ed6\u6536\u4ef6\u4eba
@@ -298,8 +296,8 @@ tool.rm-references.label=\u5173\u7cfb
 tool.rm-references.description=\u5173\u7cfb\u5b9a\u4e49
 tool.rm-events.label=\u4e8b\u4ef6
 tool.rm-events.description=\u4e8b\u4ef6\u5b9a\u4e49
-tool.rm-audit.label=\u5ba1\u6838
-tool.rm-audit.description=\u8bb0\u5f55\u7ba1\u7406\u5ba1\u6838
+tool.rm-audit.label=\u5ba1\u8ba1
+tool.rm-audit.description=\u8bb0\u5f55\u7ba1\u7406\u5ba1\u8ba1
 tool.rm-email-mappings.label=\u7535\u5b50\u90ae\u4ef6\u6620\u5c04
 tool.rm-email-mappings.description=\u7535\u5b50\u90ae\u4ef6\u6620\u5c04\u5b9a\u4e49
 tool.rm-user-rights.label=\u7528\u6237\u6743\u9650\u62a5\u544a
@@ -339,28 +337,30 @@ details.description=\u8bf4\u660e
 details.description.none=\uff08\u65e0\uff09
 # Record Category
 details.category.identifier=\u8bb0\u5f55\u7c7b\u522b\u6807\u8bc6\u7b26
-details.category.disposition-authority=\u5904\u7f6e\u673a\u6784
+details.category.disposition-authority=\u5904\u7f6e\u5f53\u5c40
 details.category.disposition-instructions=\u5904\u7f6e\u8bf4\u660e
-details.category.vital-record-indicator=\u91cd\u8981\u8bb0\u5f55\u6307\u793a\u7b26
+details.category.vital-record-indicator=\u6838\u5fc3\u8bb0\u5f55\u6307\u793a\u7b26
 # Record Folder
 details.folder.identifier=\u8bb0\u5f55\u6587\u4ef6\u5939\u6807\u8bc6\u7b26
-details.folder.vital-record-indicator=\u91cd\u8981\u8bb0\u5f55\u6307\u793a\u7b26
+details.folder.vital-record-indicator=\u6838\u5fc3\u8bb0\u5f55\u6307\u793a\u7b26
 # Record
 details.record.identifier=\u552f\u4e00\u8bb0\u5f55\u6807\u8bc6\u7b26
-details.record.date-filed=\u5b58\u6863\u65e5\u671f
+details.record.date-filed=\u7acb\u5377\u65e5\u671f
 details.record.publication-date=\u53d1\u5e03\u65e5\u671f
 details.record.originator=\u5efa\u7acb\u8005
-details.record.originating-organization=\u5efa\u7acb\u7ec4\u7ec7
+details.record.originating-organization=\u8d77\u59cb\u7ec4\u7ec7
 # Incomplete Record
 details.undeclared-record.info=\u4e0d\u5b8c\u6574\u7684\u8bb0\u5f55
 # Transfer Container
 details.transfer-container.title=\u8f6c\u79fb {0}
 details.transfer-container.is-accession=<em>\u6ce8\uff1a</em>\u8f6c\u79fb\u7c7b\u578b\u4e3a\u52a0\u5165
 # Hold Container
-details.hold-container.title=\u4fdd\u6301\u521b\u5efa\u4e8e {0}
-details.hold-container.title.date-format=dd mmmm yyyy \u7684 HH:MM:ss
-details.hold-container.reason=\u4fdd\u6301\u539f\u56e0
-details.hold-container.reason.none=\u4e0d\u53ef\u7528
+details.hold.title=\u4fdd\u5b58\u521b\u5efa\u4e8e {0}
+details.hold.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
+details.hold.reason=\u4fdd\u5b58\u539f\u56e0
+details.hold.reason.none=\u4e0d\u53ef\u7528
+# Unfiled Records Container Child
+details.unfiled-record-folder.identifier=\u6587\u4ef6\u5939\u6807\u8bc6\u7b26
 
 ## File Upload (upload new version)
 label.filter-description=\u7c7b\u578b\u4e0e {0} \u76f8\u540c
@@ -379,12 +379,15 @@ details.undeclared-record.info=\u4e0d\u5b8c\u6574\u7684\u8bb0\u5f55
 details.rejected-record.info=\u62d2\u7edd\u7684\u8bb0\u5f55
 details.record.identifier=\u552f\u4e00\u8bb0\u5f55\u6807\u8bc6\u7b26
 details.record.originator=\u5efa\u7acb\u8005
-details.record.originating-organization=\u5efa\u7acb\u7ec4\u7ec7
+details.record.originating-organization=\u8d77\u59cb\u7ec4\u7ec7
 
 ## Create site dialog
 description.recordsManagementSite=\u8bb0\u5f55\u7ba1\u7406\u7ad9\u70b9
 title.recordsManagementSite=\u8bb0\u5f55\u7ba1\u7406
 type.recordsManagementSite=\u8bb0\u5f55\u7ba1\u7406\u7ad9\u70b9
+compliance.standard=\u6807\u51c6
+compliance.dod5015=DoD 5015.2-STD
+label.compliance=\u53ef\u5408\u89c4
 
 ## Console title
 link.managementConsole=\u7ba1\u7406\u63a7\u5236\u53f0
@@ -418,3 +421,34 @@ Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=\u8bf7\u9009\u62e
 ## Forms
 form.control.object-picker.items-list.empty=\u65e0\u9879\u76ee
 form.control.object-picker.items-list.loading=\u6b63\u5728\u52a0\u8f7d...
+
+## File-to substitution suggestions
+file-to.substitution.node.cm.title.label=\u6807\u9898
+file-to.substitution.node.cm.description.label=\u8bf4\u660e
+file-to.substitution.node.cm.accessed.label=\u4e0a\u6b21\u8bbf\u95ee\u65f6\u95f4
+file-to.substitution.node.cm.created.label=\u521b\u5efa\u65f6\u95f4
+file-to.substitution.node.cm.creator.label=\u521b\u5efa\u8005
+file-to.substitution.node.cm.modified.label=\u6700\u8fd1\u4e00\u6b21\u4fee\u6539\u65f6\u95f4
+file-to.substitution.node.cm.modifier.label=\u4fee\u6539\u8005
+file-to.substitution.node.cm.name.label=\u540d\u79f0
+file-to.substitution.node.rma.origionalName.label=\u539f\u59cb\u8282\u70b9\u540d\u79f0
+file-to.substitution.node.rma.dateFiled.label=\u7acb\u5377\u65e5\u671f
+file-to.substitution.node.rma.location.label=\u4f4d\u7f6e
+file-to.substitution.node.rma.dbUniquenessId.label=\u552f\u4e00\u6570\u636e\u5e93 ID
+file-to.substitution.node.rma.identifier.label=\u6807\u8bc6\u7b26
+file-to.substitution.node.sys.node-uuid.label=\u8282\u70b9 ID
+file-to.substitution.node.sys.store-identifier.label=\u5e93 ID
+file-to.substitution.node.sys.store-protocol.label=\u5e93\u534f\u8bae
+file-to.substitution.date.day.short.label=\u7f29\u5199\u661f\u671f\u6570\uff08\u4f8b\u5982\u5468\u4e00\uff09
+file-to.substitution.date.day.label=\u661f\u671f\u6570\uff08\u4f8b\u5982\u5468\u4e00\uff09
+file-to.substitution.date.day.long.label=\u5168\u957f\u661f\u671f\u6570\uff08\u4f8b\u5982\u661f\u671f\u4e00\uff09
+file-to.substitution.date.day.number.label=\u5929\u6570\uff08\u4f8b\u5982 1\uff09
+file-to.substitution.date.day.year.label=\u4e00\u5e74\u4e2d\u7684\u7b2c\u51e0\u5929\uff08\u4f8b\u5982\u7b2c 216 \u5929\uff09
+file-to.substitution.date.month.short.label=\u7f29\u5199\u6708\u4efd\uff08\u4f8b\u5982\u4e00\u6708\uff09
+file-to.substitution.date.month.label=\u6708\u4efd\uff08\u4f8b\u5982\u4e00\u6708\uff09
+file-to.substitution.date.month.long.label=\u5168\u957f\u6708\u4efd\uff08\u4f8b\u5982\u4e00\u6708\uff09
+file-to.substitution.date.month.number.label=\u6708\u4efd\uff08\u4f8b\u5982 01\uff09
+file-to.substitution.date.year.short.label=\u7f29\u5199\u5e74\u4efd\uff08\u4f8b\u5982 14\uff09
+file-to.substitution.date.year.label=\u5e74\uff08\u4f8b\u5982 14 \u5e74\uff09
+file-to.substitution.date.year.long.label=\u5168\u957f\u5e74\u4efd\uff08\u4f8b\u5982 2014 \u5e74\uff09
+file-to.substitution.date.year.week.label=\u4e00\u5e74\u4e2d\u7684\u7b2c\u51e0\u5468\uff08\u4f8b\u5982\u7b2c 31 \u5468\uff09
