--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_zh_CN.properties
@@ -1,4 +1,4 @@
-label.header-title=\u5ba1\u6838
+label.header-title=\u5ba1\u8ba1
 
 label.yes=\u662f
 label.no=\u5426
@@ -6,25 +6,25 @@ label.record=\u8bb0\u5f55
 label.button-cancel=\u53d6\u6d88
 button.view-record=\u67e5\u770b\u8bb0\u5f55
 
-label.clear-log-title=\u662f\u5426\u6e05\u9664\u5ba1\u6838\u65e5\u5fd7\uff1f
-label.clear-log-confirmation=\u662f\u5426\u786e\u5b9a\u8981\u6e05\u9664\u5ba1\u6838\u65e5\u5fd7\uff1f
-label.clearing-log-message=\u8bf7\u7a0d\u5019\uff0c\u6b63\u5728\u6e05\u9664\u5ba1\u6838\u65e5\u5fd7\u3002
-label.cleared-log-message=\u5ba1\u6838\u65e5\u5fd7\u5df2\u6e05\u9664\u3002
-message.clear-log-fail = \u6e05\u9664\u5ba1\u6838\u65e5\u5fd7\u65f6\u51fa\u9519\u3002
+label.clear-log-title=\u662f\u5426\u6e05\u9664\u5ba1\u8ba1\u65e5\u5fd7\uff1f
+label.clear-log-confirmation=\u662f\u5426\u786e\u5b9a\u8981\u6e05\u9664\u5ba1\u8ba1\u65e5\u5fd7\uff1f
+label.clearing-log-message=\u8bf7\u7a0d\u5019\uff0c\u6b63\u5728\u6e05\u9664\u5ba1\u8ba1\u65e5\u5fd7\u3002
+label.cleared-log-message=\u5ba1\u8ba1\u65e5\u5fd7\u5df2\u6e05\u9664\u3002
+message.clear-log-fail = \u6e05\u9664\u5ba1\u8ba1\u65e5\u5fd7\u65f6\u51fa\u9519\u3002
 
-label.stopped-at=\u5ba1\u6838\u65e5\u5fd7\u5728 {0} \u505c\u6b62
-label.stop-log-title=\u662f\u5426\u505c\u6b62\u5ba1\u6838\u65e5\u5fd7\uff1f
-label.stop-log-confirmation=\u662f\u5426\u786e\u5b9a\u8981\u505c\u6b62\u5ba1\u6838\u65e5\u5fd7\uff1f
-label.stopping-log-message=\u8bf7\u7a0d\u5019\uff0c\u6b63\u5728\u505c\u6b62\u5ba1\u6838\u65e5\u5fd7\u3002
-label.stopped-log-message=\u5ba1\u6838\u65e5\u5fd7\u5df2\u505c\u6b62\u3002
-message.stop-log-fail = \u505c\u6b62\u5ba1\u6838\u65e5\u5fd7\u65f6\u51fa\u9519\u3002
+label.stopped-at=\u5ba1\u8ba1\u65e5\u5fd7\u5728 {0} \u505c\u6b62
+label.stop-log-title=\u662f\u5426\u505c\u6b62\u5ba1\u8ba1\u65e5\u5fd7\uff1f
+label.stop-log-confirmation=\u662f\u5426\u786e\u5b9a\u8981\u505c\u6b62\u5ba1\u8ba1\u65e5\u5fd7\uff1f
+label.stopping-log-message=\u8bf7\u7a0d\u5019\uff0c\u6b63\u5728\u505c\u6b62\u5ba1\u8ba1\u65e5\u5fd7\u3002
+label.stopped-log-message=\u5ba1\u8ba1\u65e5\u5fd7\u5df2\u505c\u6b62\u3002
+message.stop-log-fail = \u505c\u6b62\u5ba1\u8ba1\u65e5\u5fd7\u65f6\u51fa\u9519\u3002
 
-label.started-at=\u5ba1\u6838\u65e5\u5fd7\u5728 {0} \u542f\u52a8
-label.start-log-title=\u662f\u5426\u542f\u52a8\u5ba1\u6838\u65e5\u5fd7\uff1f
-label.start-log-confirmation=\u662f\u5426\u786e\u5b9a\u8981\u542f\u52a8\u5ba1\u6838\u65e5\u5fd7\uff1f
-label.starting-log-message=\u8bf7\u7a0d\u5019\uff0c\u6b63\u5728\u542f\u52a8\u5ba1\u6838\u65e5\u5fd7\u3002
-label.started-log-message=\u5ba1\u6838\u65e5\u5fd7\u5df2\u542f\u52a8\u3002
-message.start-log-fail = \u542f\u52a8\u5ba1\u6838\u65e5\u5fd7\u65f6\u51fa\u9519\u3002
+label.started-at=\u5ba1\u8ba1\u65e5\u5fd7\u5728 {0} \u542f\u52a8
+label.start-log-title=\u662f\u5426\u542f\u52a8\u5ba1\u8ba1\u65e5\u5fd7\uff1f
+label.start-log-confirmation=\u662f\u5426\u786e\u5b9a\u8981\u542f\u52a8\u5ba1\u8ba1\u65e5\u5fd7\uff1f
+label.starting-log-message=\u8bf7\u7a0d\u5019\uff0c\u6b63\u5728\u542f\u52a8\u5ba1\u8ba1\u65e5\u5fd7\u3002
+label.started-log-message=\u5ba1\u8ba1\u65e5\u5fd7\u5df2\u542f\u52a8\u3002
+message.start-log-fail = \u542f\u52a8\u5ba1\u8ba1\u65e5\u5fd7\u65f6\u51fa\u9519\u3002
 message.select-from-date=\u9009\u62e9\u5f00\u59cb\u65e5\u671f
 message.select-to-date=\u9009\u62e9\u622a\u6b62\u65e5\u671f
 
@@ -38,9 +38,9 @@ label.button-file-record=\u5f52\u6863\u4e3a\u8bb0\u5f55
 label.button-apply=\u5e94\u7528
 label.button-details=\u8be6\u7ec6\u4fe1\u606f
 
-label.filed-log-message=\u5ba1\u6838\u65e5\u5fd7\u5df2\u5f52\u6863\u4e3a\u8bb0\u5f55\u3002
-message.filing-log-fail=\u5c06\u5ba1\u6838\u65e5\u5fd7\u5f52\u6863\u4e3a\u8bb0\u5f55\u5931\u8d25\u3002
-label.file-record=\u6587\u4ef6\u8bb0\u5f55
+label.filed-log-message=\u5ba1\u8ba1\u65e5\u5fd7\u5df2\u5f52\u6863\u4e3a\u8bb0\u5f55\u3002
+message.filing-log-fail=\u5c06\u5ba1\u8ba1\u5f52\u6863\u4e3a\u8bb0\u5f55\u5931\u8d25\u3002
+label.file-record=\u7acb\u5377\u8bb0\u5f55
 
 label.timestamp=\u65f6\u95f4\u6233
 label.user=\u7528\u6237
@@ -53,10 +53,10 @@ label.pagination=\u663e\u793a\u65e5\u5fd7\u4e2d\u7684\u6700\u540e {0} \u4e2a\u67
 label.show-log-for=\u663e\u793a\u4ee5\u4e0b\u9879\u76ee\u7684\u65e5\u5fd7\uff1a
 label.all-users=\u6240\u6709\u7528\u6237
 label.remove-filter=\u5220\u9664\u7b5b\u9009\u5668
-label.default-message=\u5355\u51fb\u201c\u5e94\u7528\u201d\u4ee5\u67e5\u770b\u5ba1\u6838\u65e5\u5fd7
+label.default-message=\u5355\u51fb\u201c\u5e94\u7528\u201d\u4ee5\u67e5\u770b\u5ba1\u8ba1\u65e5\u5fd7
 
-node.root=\u6587\u4ef6\u8ba1\u5212
-title.single=\u9009\u62e9\u5ba1\u6838\u8bb0\u5f55\u7684\u4f4d\u7f6e
+node.root=\u5f52\u7c7b\u65b9\u6848
+title.single=\u9009\u62e9\u5ba1\u8ba1\u8bb0\u5f55\u7684\u4f4d\u7f6e
 
 label.header-users=\u7528\u6237
 label.header-entries=\u6761\u76ee\u6570
