--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
@@ -1,7 +1,10 @@
 ## Buttons
 button.new-category=\u65b0\u5efa\u7c7b\u522b
 button.new-folder=\u65b0\u5efa\u6587\u4ef6\u5939
+button.new-unfiledRecords-folder=\u65b0\u5efa\u6587\u4ef6\u5939
+button.new-hold=\u65b0\u7684\u4fdd\u5b58
 button.upload=\u6587\u4ef6
+button.declare-record=\u58f0\u660e\u8bb0\u5f55
 button.import=\u5bfc\u5165
 button.export-all=\u5168\u90e8\u5bfc\u51fa
 button.manage-permissions=\u7ba1\u7406\u6743\u9650
@@ -14,7 +17,6 @@ button.fullscreen.enter=\u5168\u5c4f
 button.fullscreen.exit=\u9000\u51fa\u5168\u5c4f
 button.setDefaultView=\u5c06 ''{0}'' \u8bbe\u7f6e\u4e3a\u8be5\u6587\u4ef6\u5939\u7684\u9ed8\u8ba4\u503c
 button.removeDefaultView=\u5c06 ''{0}'' \u4f5c\u4e3a\u6587\u4ef6\u5939\u7684\u9ed8\u8ba4\u503c\u5220\u9664
-button.freeze.record=\u51bb\u7ed3\u8bb0\u5f55
 button.electronic=\u7535\u5b50
 button.non-electronic=\u975e\u7535\u5b50
 button.report=\u62a5\u544a
@@ -26,6 +28,10 @@ label.new-rma_recordCategory.title=\u65b0\u8bb0\u5f55\u7c7b\u522b
 label.new-rma_recordCategory.header=\u8bb0\u5f55\u7c7b\u522b\u8be6\u7ec6\u4fe1\u606f
 label.new-rma_recordFolder.title=\u65b0\u8bb0\u5f55\u6587\u4ef6\u5939
 label.new-rma_recordFolder.header=\u8bb0\u5f55\u6587\u4ef6\u5939\u8be6\u7ec6\u4fe1\u606f
+label.new-rma_hold.title=\u65b0\u7684\u4fdd\u5b58
+label.new-rma_hold.header=\u65b0\u7684\u4fdd\u5b58\u8be6\u7ec6\u4fe1\u606f
+label.new-rma_unfiledRecordFolder.title=\u65b0\u5efa\u6587\u4ef6\u5939
+label.new-rma_unfiledRecordFolder.header=\u6587\u4ef6\u5939\u8be6\u7ec6\u4fe1\u606f
 label.new-rma_nonElectronicDocument.title=\u975e\u7535\u5b50\u8bb0\u5f55
 label.new-rma_nonElectronicDocument.header=\u8bb0\u5f55\u8be6\u7ec6\u4fe1\u606f
 
@@ -42,13 +48,11 @@ menu.selected-items.destroy=\u9500\u6bc1
 menu.selected-items.export=\u5bfc\u51fa
 menu.selected-items.link-to=\u94fe\u63a5\u5230...
 menu.selected-items.file-to=\u5f52\u6863\u81f3...
-menu.selected-items.freeze=\u51bb\u7ed3
 menu.selected-items.move-to=\u79fb\u52a8\u5230...
 menu.selected-items.reviewed=\u5df2\u5ba1\u67e5
-menu.selected-items.transfer=\u8f6c\u79fb
-menu.selected-items.transfer-complete=\u8f6c\u79fb\u786e\u8ba4
-menu.selected-items.undo-cutoff=\u53d6\u6d88\u4e2d\u65ad
-menu.selected-items.unfreeze=\u53d6\u6d88\u51bb\u7ed3
+menu.selected-items.transfer=\u79fb\u4ea4
+menu.selected-items.transfer-complete=\u79fb\u4ea4\u786e\u8ba4
+menu.selected-items.undo-cutoff=\u64a4\u6d88\u4e2d\u65ad
 
 ## Pop-up Messages
 message.file.type=\u60a8\u5f52\u6863\u7684\u662f\u7535\u5b50\u8fd8\u662f\u975e\u7535\u5b50\u8bb0\u5f55\uff1f
@@ -57,12 +61,18 @@ message.multiple-delete.failure=\u65e0\u6cd5\u5220\u9664\u9879\u76ee
 message.multiple-delete.success=\u5df2\u6210\u529f\u5220\u9664 {0} \u4e2a\u9879\u76ee
 title.multiple-delete.confirm=\u786e\u8ba4\u591a\u9879\u5220\u9664
 message.multiple-delete.confirm=\u662f\u5426\u786e\u5b9a\u8981\u5220\u9664\u4ee5\u4e0b {0} \u4e2a\u9879\u76ee\uff1f
-message.multiple-delete.please-wait=\u8bf7\u7a0d\u5019\u3002 \u6b63\u5728\u5220\u9664\u6587\u4ef6...
-message.new-folder.failure=\u65e0\u6cd5\u521b\u5efa\u6587\u4ef6\u5939
-message.new-category.failure=\u65e0\u6cd5\u521b\u5efa\u7c7b\u522b
-message.new-folder.success=\u5df2\u521b\u5efa\u6587\u4ef6\u5939 ''{0}''
+message.multiple-delete.please-wait=\u8bf7\u7a0d\u5019\u3002\u6b63\u5728\u5220\u9664\u6587\u4ef6...
+message.new-unknown.error=\u7c7b\u578b ''{0}'' \u672a\u77e5\uff01
+message.new-category.failure=\u65e0\u6cd5\u521b\u5efa\u7c7b\u522b ''{0}''
+message.new-folder.failure=\u65e0\u6cd5\u521b\u5efa\u6587\u4ef6\u5939 ''{0}''
 message.new-record.failure=\u65e0\u6cd5\u521b\u5efa ''{0}''
+message.new-unfiledRecordsFolder.failure=\u65e0\u6cd5\u521b\u5efa\u672a\u7acb\u5377\u8bb0\u5f55\u6587\u4ef6\u5939 ''{0}''
+message.new-hold.failure=\u65e0\u6cd5\u521b\u5efa\u4fdd\u5b58 ''{0}''
+message.new-category.success=\u5df2\u521b\u5efa\u7c7b\u522b ''{0}''
+message.new-folder.success=\u5df2\u521b\u5efa\u6587\u4ef6\u5939 ''{0}''
 message.new-record.success=\u5df2\u521b\u5efa\u8bb0\u5f55 ''{0}''
+message.new-unfiledRecordsFolder.success=\u5df2\u521b\u5efa\u672a\u7acb\u5377\u8bb0\u5f55\u6587\u4ef6\u5939 ''{0}''
+message.new-hold.success=\u5df2\u521b\u5efa\u4fdd\u5b58 ''{0}''
 message.load-top-level-assets.failure=\u7531\u4e8e\u65e0\u6cd5\u52a0\u8f7d\u9876\u5c42\u8d44\u4ea7\uff0c\u6240\u4ee5\u65e0\u6cd5\u5168\u90e8\u5bfc\u51fa
 message.nothing-to-export=\u65e0\u53ef\u5bfc\u51fa\u7684\u5185\u5bb9
 
@@ -71,14 +81,14 @@ description.path=
 description.path.more=
 description.savedsearch=\u5df2\u4fdd\u5b58\u641c\u7d22\u7684\u7ed3\u679c
 description.savedsearch.more=''{0}''
-description.transfers=\u8f6c\u79fb
-description.transfers.more=\uff08\u7b49\u5f85\u201c\u8f6c\u79fb\u5b8c\u6210\u201d\u6216\u201c\u52a0\u5165\u5b8c\u6210\u201d\u7684\u8bb0\u5f55\uff09
+description.transfers=\u79fb\u4ea4
+description.transfers.more=\uff08\u7b49\u5f85\u201c\u79fb\u4ea4\u5b8c\u6210\u201d\u6216\u201c\u52a0\u5165\u5b8c\u6210\u201d\u7684\u8bb0\u5f55\uff09
 description.transfers.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
-description.holds=\u5f53\u524d\u7684\u4fdd\u6301
-description.holds.more=\uff08\u5904\u4e8e\u201c\u51bb\u7ed3\u201d\u72b6\u6001\u7684\u8bb0\u5f55\u548c\u8bb0\u5f55\u6587\u4ef6\u5939\uff09
+description.holds=\u5f53\u524d\u7684\u4fdd\u5b58
+description.holds.more=\uff08\u5904\u4e8e\u201c\u6682\u505c\u201d\u72b6\u6001\u7684\u8bb0\u5f55\u548c\u8bb0\u5f55\u6587\u4ef6\u5939\uff09
 description.holds.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
-description.unfiledRecords=\u672a\u5f52\u6863\u7684\u8bb0\u5f55
-description.unfiledRecords.more=\uff08\u6ca1\u6709\u5f52\u6863\u7684\u8bb0\u5f55\uff09
+description.unfiledRecords=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
+description.unfiledRecords.more=\uff08\u6ca1\u6709\u7acb\u5377\u7684\u8bb0\u5f55\uff09
 description.unfiledRecords.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
 
 ## Browser dialogs
@@ -87,6 +97,6 @@ label.filter-description.zip=\u5b58\u6863\u5305 (.zip)
 
 ## Pop-up Messages
 # General
-message.loading=\u6b63\u5728\u52a0\u8f7d\u6587\u4ef6\u8ba1\u5212...
-message.error=\u65e0\u6cd5\u8bbf\u95ee\u6587\u4ef6\u8ba1\u5212
+message.loading=\u6b63\u5728\u52a0\u8f7d\u5f52\u7c7b\u65b9\u6848...
+message.error=\u65e0\u6cd5\u8bbf\u95ee\u5f52\u7c7b\u65b9\u6848
 message.empty=\u65e0\u9879\u76ee
