--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/fileplan.get_zh_CN.properties
@@ -1,7 +1,7 @@
 ## Title
-header.fileplan=\u6587\u4ef6\u8ba1\u5212
+header.fileplan=\u5f52\u7c7b\u65b9\u6848
 
 ## Filters
-label.transfers=\u8f6c\u79fb
-label.holds=\u4fdd\u6301
-label.unfiledRecords=\u672a\u5f52\u6863\u7684\u8bb0\u5f55
+label.transfers=\u79fb\u4ea4
+label.holds=\u4fdd\u5b58
+label.unfiledRecords=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
