--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_zh_CN.properties
@@ -4,8 +4,8 @@ label.parentPath=\u8def\u5f84
 label.recordSeriesIdentifier=\u8bb0\u5f55\u7cfb\u5217\u6807\u8bc6\u7b26
 label.recordCategoryIdentifier=\u8bb0\u5f55\u7c7b\u522b\u6807\u8bc6\u7b26
 label.recordFolderIdentifier=\u8bb0\u5f55\u6587\u4ef6\u5939\u6807\u8bc6\u7b26
-label.vitalRecordIndicator=\u91cd\u8981\u8bb0\u5f55\u6307\u793a\u7b26
-label.dispositionAuthority=\u5904\u7f6e\u673a\u6784
+label.vitalRecordIndicator=\u6838\u5fc3\u8bb0\u5f55\u6307\u793a\u7b26
+label.dispositionAuthority=\u5904\u7f6e\u5f53\u5c40
 label.noDispositionAuthority=\u65e0
 label.dispositionSchedule=\u5904\u7f6e\u8ba1\u5212
 label.noActions=\u65e0\u6b65\u9aa4
