--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/folder-details/folder-actions.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/folder-details/folder-actions.get_zh_CN.properties
@@ -1,4 +1,4 @@
 heading=\u64cd\u4f5c
 
 ## Pop-up Messages
-message.error=\u65e0\u6cd5\u8bbf\u95ee\u6587\u4ef6\u8ba1\u5212
+message.error=\u65e0\u6cd5\u8bbf\u95ee\u5f52\u7c7b\u65b9\u6848
