--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/new-reference.get_zh_CN.properties
@@ -1,10 +1,10 @@
-label.title-new-reference = \u65b0\u5f15\u7528
+label.title-new-reference = \u65b0\u53c2\u8003
 label.select = \u9009\u62e9
 label.record-link = \u94fe\u63a5\u81f3\u8bb0\u5f55
 label.record-rel = \u5173\u7cfb
-label.name = \u5f15\u7528\u540d\u79f0
+label.name = \u53c2\u8003\u540d\u79f0
 label.required = \u5fc5\u586b\u5b57\u6bb5
 label.create=\u521b\u5efa
 label.cancel=\u53d6\u6d88
-label.fileplan= \u6587\u4ef6\u8ba1\u5212
-message.createfail=\u65e0\u6cd5\u521b\u5efa\u65b0\u5f15\u7528
+label.fileplan= \u5f52\u7c7b\u65b9\u6848
+message.createfail=\u65e0\u6cd5\u521b\u5efa\u65b0\u53c2\u8003
