--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_zh_CN.properties
@@ -1,5 +1,4 @@
 header.action=\u6267\u884c\u64cd\u4f5c\uff1a
-button.freeze=\u51bb\u7ed3...
 button.reject=\u62d2\u7edd...
 button.requestInfo=\u8bf7\u6c42\u4fe1\u606f...
 button.select-folder=\u9009\u62e9...
@@ -23,4 +22,19 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM\uff0824 \u5c0f\u65f6\u5236\uff09
 
 record.folder.path.title=\u5355\u51fb\u4ee5\u663e\u793a\u8bb0\u5f55\u6587\u4ef6\u5939\u8def\u5f84\u5b57\u6bb5\u7684\u5e2e\u52a9\u6587\u672c\u3002
-record.folder.path.help=<p>\u5141\u8bb8\u4ee5\u4e0b\u60c5\u51b5\uff1a</p><p></p><p>date.day.short = Sun</p><p>date.day = Sun</p><p>date.day.long = Sunday</p><p>date.day.number = 7 (1-7)</p><p>date.day.year = 216 (001-365)</p><p>date.month.short = Aug</p><p>date.month = Aug</p><p>date.month.long = August</p><p>date.month.number = 08 (01-12)</p><p>date.year.short = 13</p><p>date.year = 13</p><p>date.year.long = 2013</p><p>date.year.week = 31 (01-52)</p><p>node.cm:title = <\u8282\u70b9\u6807\u9898\u503c></p>
+record.folder.path.help=<p>\u5141\u8bb8\u4ee5\u4e0b\u60c5\u51b5\uff1a</p>\
+   <p></p>\
+   <p>date.day.short = \u5468\u65e5</p>\
+   <p>date.day = \u5468\u65e5</p>\
+   <p>date.day.long = \u661f\u671f\u65e5</p>\
+   <p>date.day.number = 7 (1-7)</p>\
+   <p>date.day.year = 216 (001-365)</p>\
+   <p>date.month.short = \u516b\u6708</p>\
+   <p>date.month = \u516b\u6708</p>\
+   <p>date.month.long = \u516b\u6708</p>\
+   <p>date.month.number = 08 (01-12)</p>\
+   <p>date.year.short = 13</p>\
+   <p>date.year = 13</p>\
+   <p>date.year.long = 2013</p>\
+   <p>date.year.week = 31 (01-52)</p>\
+   <p>node.cm:title = <title value of the node></p>\
