--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/html-upload.get_zh_CN.properties
@@ -5,7 +5,8 @@ header.singleImport=\u5bfc\u5165
 section.recordType=\u9009\u62e9\u8bb0\u5f55\u7c7b\u578b
 section.file=\u9009\u62e9\u6587\u4ef6
 
-label.singleUploadTip=\u5b89\u88c5\u6700\u65b0\u7684 Flash \u64ad\u653e\u5668\u4e4b\u540e\uff0c\u60a8\u53ef\u4ee5\u4e0a\u4f20\u591a\u4e2a\u6587\u4ef6\u3002 \u53ef\u4ece <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player \u4e0b\u8f7d\u4e2d\u5fc3</a>\u4e0b\u8f7d Flash \u64ad\u653e\u5668\u3002
+label.singleUploadTip=\u5b89\u88c5\u6700\u65b0\u7684 Flash \u64ad\u653e\u5668\u4e4b\u540e\uff0c\u60a8\u53ef\u4ee5\u4e0a\u4f20\u591a\u4e2a\u6587\u4ef6\u3002\
+  \u53ef\u4ece <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player \u4e0b\u8f7d\u4e2d\u5fc3</a>\u4e0b\u8f7d Flash \u64ad\u653e\u5668\u3002
 
 label.singleUpdateTip=\u4e0a\u4f20\u65b0\u7248\u672c\u7684 {0}
 button.upload=\u4e0a\u4f20\u6587\u4ef6
