--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get_zh_CN.properties
@@ -2,7 +2,8 @@
 header=\u9009\u62e9\u76ee\u6807\u6587\u4ef6\u5939
 
 ## Copy To
-copy.node.root=\u6587\u4ef6\u8ba1\u5212
+copy.node.root=\u5f52\u7c7b\u65b9\u6848
+copy.node.unfiledroot=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
 copy.title.single=\u5c06 {0} \u590d\u5236\u5230...
 copy.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u590d\u5236\u5230...
 copy.button=\u590d\u5236
@@ -12,7 +13,8 @@ copy.message.success=\u6210\u529f\u590d\u5236 {0} \u4e2a\u9879\u76ee
 copy.message.failure=\u65e0\u6cd5\u590d\u5236\u9879\u76ee
 
 ## Move To
-move.node.root=\u6587\u4ef6\u8ba1\u5212
+move.node.root=\u5f52\u7c7b\u65b9\u6848
+move.node.unfiledroot=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
 move.title.single=\u5c06 {0} \u79fb\u52a8\u5230...
 move.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u79fb\u52a8\u5230...
 move.button=\u79fb\u52a8
@@ -22,7 +24,8 @@ move.message.success=\u5df2\u6210\u529f\u79fb\u52a8 {0} \u4e2a\u9879\u76ee
 move.message.failure=\u65e0\u6cd5\u79fb\u52a8\u9879\u76ee
 
 ## Link To
-link.node.root=\u6587\u4ef6\u8ba1\u5212
+link.node.root=\u5f52\u7c7b\u65b9\u6848
+link.node.unfiledroot=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
 link.title.single=\u5c06 {0} \u94fe\u63a5\u81f3...
 link.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u94fe\u63a5\u81f3...
 link.button=\u94fe\u63a5
@@ -32,7 +35,8 @@ link.message.success=\u5df2\u6210\u529f\u94fe\u63a5 {0} \u4e2a\u9879\u76ee
 link.message.failure=\u65e0\u6cd5\u94fe\u63a5\u9879\u76ee
 
 ## File To
-file.node.root=\u6587\u4ef6\u8ba1\u5212
+file.node.root=\u5f52\u7c7b\u65b9\u6848
+file.node.unfiledroot=\u672a\u7acb\u5377\u7684\u8bb0\u5f55
 file.title.single=\u5c06 {0} \u5f52\u6863\u81f3...
 file.title.multi=\u5c06 {0} \u4e2a\u9879\u76ee\u5f52\u6863\u81f3...
 file.button=\u6587\u4ef6
