SIMP CHINESE: Simplified Chinese fixed files for RM 2.2 UI Bundle based on EN rev71684 - fix for RM-1339
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73804 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -1,4 +1,4 @@
-## Records Management Messages
+﻿## Records Management Messages
 
 ## Page titles
 page.rmDocumentLibrary.title=\u5f52\u7c7b\u65b9\u6848
@@ -80,9 +80,9 @@ message.confirm.hide.record.title=\u9690\u85cf\u8bb0\u5f55
 message.confirm.hide.record=\u60a8\u6b63\u5728\u9690\u85cf\u8bb0\u5f55\u5e76\u4e14\u5c06\u65e0\u6cd5\u518d\u5728\u60a8\u7684\u5408\u4f5c\u7ad9\u70b9\u4e2d\u770b\u5230\u8be5\u8bb0\u5f55\u3002
 message.select=\u9009\u62e9...
 message.pdf-record-fonts.title=PDF \u8bb0\u5f55\uff1a\u5d4c\u5165\u5b57\u4f53\u68c0\u67e5
-message.pdf-record-fonts.accession=\u68c0\u67e5\u521a\u52a0\u5165\u7684\u4efb\u4f55 PDF \u8bb0\u5f55\u662f\u5426\u5305\u542b\u9002\u7528\u7684\u5d4c\u5165\u5b57\u4f53\u3002
-message.pdf-record-fonts.transfer=\u68c0\u67e5\u521a\u8f6c\u79fb\u7684\u4efb\u4f55 PDF \u8bb0\u5f55\u662f\u5426\u5305\u542b\u9002\u7528\u7684\u5d4c\u5165\u5b57\u4f53\u3002
-message.pdf-record-fonts.unknown=\u5982\u679c\u8f6c\u79fb\u6216\u52a0\u5165\u7684\u5185\u5bb9\u5305\u542b PDF \u8bb0\u5f55\uff0c\u60a8\u5e94\u5f53\u68c0\u67e5\u662f\u5426\u5305\u542b\u4e86\u9002\u7528\u7684\u5d4c\u5165\u5b57\u4f53\u3002
+message.pdf-record-fonts.accession=\u68c0\u67e5\u521a\u5165\u7ba1\u7684\u4efb\u4f55 PDF \u8bb0\u5f55\u662f\u5426\u5305\u542b\u9002\u7528\u7684\u5d4c\u5165\u5b57\u4f53\u3002
+message.pdf-record-fonts.transfer=\u68c0\u67e5\u521a\u79fb\u4ea4\u7684\u4efb\u4f55 PDF \u8bb0\u5f55\u662f\u5426\u5305\u542b\u9002\u7528\u7684\u5d4c\u5165\u5b57\u4f53\u3002
+message.pdf-record-fonts.unknown=\u5982\u679c\u79fb\u4ea4\u6216\u5165\u7ba1\u7684\u5185\u5bb9\u5305\u542b PDF \u8bb0\u5f55\uff0c\u60a8\u5e94\u5f53\u68c0\u67e5\u662f\u5426\u5305\u542b\u4e86\u9002\u7528\u7684\u5d4c\u5165\u5b57\u4f53\u3002
 message.request-info-success=\u5df2\u6210\u529f\u8bf7\u6c42\u4fe1\u606f
 message.request-info-failure=\u5728\u8bf7\u6c42\u4fe1\u606f\u65f6\u51fa\u9519
 
@@ -94,7 +94,7 @@ path.fileplan=\u5f52\u7c7b\u65b9\u6848
 
 ## File Plan Actions
 actions.more=\u66f4\u591a...
-actions.accession=\u52a0\u5165
+actions.accession=\u5165\u7ba1
 actions.close-folder=\u5173\u95ed\u6587\u4ef6\u5939
 actions.copy-to=\u590d\u5236\u5230...
 actions.cutoff=\u4e2d\u65ad
@@ -141,10 +141,10 @@ actions.file-hold-report=\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u4e2a\u6240\u9009\u9879\u76ee
-message.accession.failure=\u65e0\u6cd5\u52a0\u5165 ''{0}''
-message.accession.success=\u6210\u529f\u52a0\u5165 ''{0}''
-message.accession-complete.failure=\u65e0\u6cd5\u5b8c\u6210 ''{0}'' \u7684\u52a0\u5165
-message.accession-complete.success=''{0}'' \u7684\u52a0\u5165\u5df2\u5b8c\u6210
+message.accession.failure=\u65e0\u6cd5\u5165\u7ba1 ''{0}''
+message.accession.success=\u6210\u529f\u5165\u7ba1 ''{0}''
+message.accession-complete.failure=\u65e0\u6cd5\u5b8c\u6210 ''{0}'' \u7684\u5165\u7ba1
+message.accession-complete.success=''{0}'' \u7684\u5165\u7ba1\u5df2\u5b8c\u6210
 message.close.failure=\u65e0\u6cd5\u5173\u95ed ''{0}''
 message.close.success=\u5df2\u6210\u529f\u5173\u95ed ''{0}''
 message.cutoff.failure=\u65e0\u6cd5\u4e2d\u65ad ''{0}''
@@ -176,10 +176,10 @@ message.reviewed.failure=\u65e0\u6cd5\u5ba1\u67e5 ''{0}''
 message.reviewed.success=\u5df2\u6210\u529f\u5ba1\u67e5 ''{0}''
 message.split-email.failure=\u65e0\u6cd5\u5c06\u9644\u4ef6\u4e0e ''{0}'' \u5206\u79bb
 message.split-email.success=\u5df2\u6210\u529f\u5c06\u9644\u4ef6\u4e0e ''{0}'' \u5206\u79bb
-message.transfer.failure=\u65e0\u6cd5\u8f6c\u79fb ''{0}''
-message.transfer.success=\u5df2\u6210\u529f\u8f6c\u79fb ''{0}''
-message.transfer-complete.failure=\u65e0\u6cd5\u5b8c\u6210 ''{0}'' \u7684\u8f6c\u79fb
-message.transfer-complete.success=''{0}'' \u8f6c\u79fb\u5df2\u5b8c\u6210
+message.transfer.failure=\u65e0\u6cd5\u79fb\u4ea4 ''{0}''
+message.transfer.success=\u5df2\u6210\u529f\u79fb\u4ea4 ''{0}''
+message.transfer-complete.failure=\u65e0\u6cd5\u5b8c\u6210 ''{0}'' \u7684\u79fb\u4ea4
+message.transfer-complete.success=''{0}'' \u79fb\u4ea4\u5df2\u5b8c\u6210
 message.undeclare.failure=\u65e0\u6cd5\u91cd\u65b0\u6253\u5f00 ''{0}''
 message.undeclare.success=''{0}'' \u4e0d\u518d\u662f\u5b8c\u6574\u8bb0\u5f55
 message.undo-cutoff.failure=\u65e0\u6cd5\u64a4\u6d88 ''{0}'' \u7684\u4e2d\u65ad
@@ -198,14 +198,14 @@ message.file-destruction-report.failure=\u65e0\u6cd5\u751f\u6210\u9500\u6bc1\u62
 message.file-destruction-report.success=\u5df2\u751f\u6210\u9500\u6bc1\u62a5\u544a
 message.end-retention.failure=\u65e0\u6cd5\u7ed3\u675f\u4fdd\u7559
 message.end-retention.success=\u4fdd\u7559\u5df2\u7ed3\u675f
-message.file-success=\u5df2\u6210\u529f\u5c06\u8f6c\u79fb\u62a5\u544a\u5f52\u6863\u4e3a ''{0}''
+message.file-success=\u5df2\u6210\u529f\u5c06\u62a5\u544a\u5f52\u6863\u4e3a ''{0}''
 message.file-failure=\u65e0\u6cd5\u5b8c\u6210\u5f52\u6863\u64cd\u4f5c
 message.file-hold-report.failure=\u65e0\u6cd5\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 message.file-hold-report.success=\u5df2\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 
 ## File Plan Status Indicators
-status.rm-accession=\u52a0\u5165\u6302\u8d77
-status.rm-accessioned=\u5df2\u52a0\u5165
+status.rm-accession=\u5165\u7ba1\u6302\u8d77
+status.rm-accessioned=\u5df2\u5165\u7ba1
 status.rm-closed=\u5df2\u5173\u95ed
 status.rm-cutoff=\u4e2d\u65ad
 status.rm-cutoff-folder=\u4e2d\u65ad
@@ -352,8 +352,8 @@ details.record.originating-organization=\u8d77\u59cb\u7ec4\u7ec7
 # Incomplete Record
 details.undeclared-record.info=\u4e0d\u5b8c\u6574\u7684\u8bb0\u5f55
 # Transfer Container
-details.transfer-container.title=\u8f6c\u79fb {0}
-details.transfer-container.is-accession=<em>\u6ce8\uff1a</em>\u8f6c\u79fb\u7c7b\u578b\u4e3a\u52a0\u5165
+details.transfer-container.title=\u79fb\u4ea4 {0}
+details.transfer-container.is-accession=<em>\u6ce8\uff1a</em>\u79fb\u4ea4\u7c7b\u578b\u4e3a\u5165\u7ba1
 # Hold Container
 details.hold.title=\u4fdd\u5b58\u521b\u5efa\u4e8e {0}
 details.hold.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
