--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_zh_CN.properties
@@ -1,4 +1,4 @@
-events.heading=\u4e8b\u4ef6
+﻿events.heading=\u4e8b\u4ef6
 title.completedEvents=\u5df2\u5b8c\u6210
 title.incompleteEvents=\u672a\u5b8c\u6210
 title.completeEvent=\u5b8c\u6210\u4e8b\u4ef6
