--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get_zh_CN.properties
@@ -1,4 +1,4 @@
-label.title=\u5ba1\u8ba1\u65e5\u5fd7
+﻿label.title=\u5ba1\u8ba1\u65e5\u5fd7
 label.title-for={0} \u7684\u5ba1\u8ba1\u65e5\u5fd7
 label.from=\u53d1\u4ef6\u4eba
 label.to=\u6536\u4ef6\u4eba
