--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get_zh_CN.properties
@@ -1,4 +1,4 @@
-label.custom-metadata-title=\u81ea\u5b9a\u4e49\u5143\u6570\u636e
+﻿label.custom-metadata-title=\u81ea\u5b9a\u4e49\u5143\u6570\u636e
 label.create-metadata-title=\u65b0\u7684\u5143\u6570\u636e
 label.edit-metadata-title=\u7f16\u8f91\u5143\u6570\u636e\u5c5e\u6027
 label.list-title=\u5bf9\u8c61
