--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-define-roles.get_zh_CN.properties
@@ -1,4 +1,4 @@
-message.get-roles-failure=\u65e0\u6cd5\u68c0\u7d22\u7528\u6237\u89d2\u8272\uff1a{0}
+﻿message.get-roles-failure=\u65e0\u6cd5\u68c0\u7d22\u7528\u6237\u89d2\u8272\uff1a{0}
 message.get-role-failure=\u65e0\u6cd5\u68c0\u7d22\u89d2\u8272\u804c\u80fd\uff1a{0}
 message.delete.success=\u5df2\u6210\u529f\u5220\u9664\u89d2\u8272\u3002
 message.delete.failure=\u65e0\u6cd5\u5220\u9664\u89d2\u8272\u3002
