--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-list-of-values.get_zh_CN.properties
@@ -1,4 +1,4 @@
-label.view-listofvalues-title=\u5217\u8868
+﻿label.view-listofvalues-title=\u5217\u8868
 label.edit-listofvalue-title=\u7f16\u8f91\u5217\u8868\uff1a{0}
 label.values=\u503c
 label.access=\u8bbf\u95ee
