--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-references.get_zh_CN.properties
@@ -1,4 +1,4 @@
-label.view-references-title=\u94fe\u63a5\u5173\u7cfb
+﻿label.view-references-title=\u94fe\u63a5\u5173\u7cfb
 label.title.parentchild={0}\u3001{1}
 label.create-references-title=\u65b0\u5efa\u5173\u7cfb
 label.edit-references-title=\u7f16\u8f91\u5173\u7cfb
