--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-user-rights.get_zh_CN.properties
@@ -1,4 +1,4 @@
-label.user-rights=\u7528\u6237\u6743\u9650
+﻿label.user-rights=\u7528\u6237\u6743\u9650
 label.userid=\u7528\u6237 Id
 label.roles=\u89d2\u8272
 label.groups=\u7ec4
