--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/permissions/permissions.get_zh_CN.properties
@@ -1,4 +1,4 @@
-message.getpermissionsfail=\u65e0\u6cd5\u4ece\u670d\u52a1\u5668\u68c0\u7d22\u6743\u9650\u3002
+﻿message.getpermissionsfail=\u65e0\u6cd5\u4ece\u670d\u52a1\u5668\u68c0\u7d22\u6743\u9650\u3002
 message.selectauthority=\u9009\u62e9\u7528\u6237\u6216\u7ec4
 message.authoritypickerfail=\u65e0\u6cd5\u52a0\u8f7d Authority Finder \u7ec4\u4ef6\u3002
 message.finish-success=\u5df2\u6210\u529f\u66f4\u65b0\u6743\u9650\u3002
