--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/references/manage-references.get_zh_CN.properties
@@ -1,4 +1,4 @@
-label.title=\u7ba1\u7406\u53c2\u8003\uff1a{0}
+﻿label.title=\u7ba1\u7406\u53c2\u8003\uff1a{0}
 label.edit=\u7f16\u8f91
 label.delete=\u5220\u9664
 label.done=\u5b8c\u6210
