--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_zh_CN.properties
@@ -1,4 +1,4 @@
-header.action=\u6267\u884c\u64cd\u4f5c\uff1a
+﻿header.action=\u6267\u884c\u64cd\u4f5c\uff1a
 button.reject=\u62d2\u7edd...
 button.requestInfo=\u8bf7\u6c42\u4fe1\u606f...
 button.select-folder=\u9009\u62e9...
