--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/rules-header.get_zh_CN.properties
@@ -1,4 +1,4 @@
-header.rules=\u89c4\u5219
+﻿header.rules=\u89c4\u5219
 button.new-rule=\u65b0\u5efa\u89c4\u5219
 button.copy-rule-from=\u590d\u5236\u89c4\u5219\u81ea...
 button.inherit.on=\u7ee7\u627f\u89c4\u5219
