--- a/rm-share/config/alfresco/module/org_alfresco_module_rm_share/file-mapping_zh_CN.properties
+++ b/rm-share/config/alfresco/module/org_alfresco_module_rm_share/file-mapping_zh_CN.properties
@@ -1,4 +1,4 @@
-# Custom AMP to WAR location mappings
+﻿# Custom AMP to WAR location mappings
 
 #
 # The following property can be used to include the standard set of mappings.
