--- a/rm-share/config/alfresco/module/org_alfresco_module_rm_share/module_zh_CN.properties
+++ b/rm-share/config/alfresco/module/org_alfresco_module_rm_share/module_zh_CN.properties
@@ -1,4 +1,4 @@
-# Alfresco Records Management Share Module
+﻿# Alfresco Records Management Share Module
 module.id=org_alfresco_module_rm_share
 
 # 28/02/2012 - Renamed
