--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_zh_CN.properties
@@ -1,4 +1,4 @@
-## Buttons
+﻿## Buttons
 button.new-category=\u65b0\u5efa\u7c7b\u522b
 button.new-folder=\u65b0\u5efa\u6587\u4ef6\u5939
 button.new-unfiledRecords-folder=\u65b0\u5efa\u6587\u4ef6\u5939
@@ -39,8 +39,8 @@ label.new-rma_nonElectronicDocument.header=\u8bb0\u5f55\u8be6\u7ec6\u4fe1\u606f
 menu.selected-items=\u5df2\u9009\u62e9\u9879...
 menu.selected-items.deselect-all=\u53d6\u6d88\u5168\u9009
 
-menu.selected-items.accession=\u52a0\u5165
-menu.selected-items.accession-complete=\u52a0\u5165\u786e\u8ba4
+menu.selected-items.accession=\u5165\u7ba1
+menu.selected-items.accession-complete=\u5165\u7ba1\u786e\u8ba4
 menu.selected-items.copy-to=\u590d\u5236\u5230...
 menu.selected-items.cutoff=\u4e2d\u65ad
 menu.selected-items.delete=\u5220\u9664
@@ -82,7 +82,7 @@ description.path.more=
 description.savedsearch=\u5df2\u4fdd\u5b58\u641c\u7d22\u7684\u7ed3\u679c
 description.savedsearch.more=''{0}''
 description.transfers=\u79fb\u4ea4
-description.transfers.more=\uff08\u7b49\u5f85\u201c\u79fb\u4ea4\u5b8c\u6210\u201d\u6216\u201c\u52a0\u5165\u5b8c\u6210\u201d\u7684\u8bb0\u5f55\uff09
+description.transfers.more=\uff08\u7b49\u5f85\u201c\u79fb\u4ea4\u5b8c\u6210\u201d\u6216\u201c\u5165\u7ba1\u5b8c\u6210\u201d\u7684\u8bb0\u5f55\uff09
 description.transfers.more.filterDisplay=\u5f53\u524d\u6b63\u5728\u67e5\u770b ''{0}''
 description.holds=\u5f53\u524d\u7684\u4fdd\u5b58
 description.holds.more=\uff08\u5904\u4e8e\u201c\u6682\u505c\u201d\u72b6\u6001\u7684\u8bb0\u5f55\u548c\u8bb0\u5f55\u6587\u4ef6\u5939\uff09
