--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_zh_CN.properties
@@ -1,4 +1,4 @@
-## Title
+﻿## Title
 header.savedsearch=\u4fdd\u5b58\u7684\u641c\u7d22
 
 rm.savedsearch.vitalRecordsName=\u6838\u5fc3\u8bb0\u5f55\u7684\u5ba1\u67e5\u5230\u671f
