--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/edit-metadata/edit-metadata-mgr.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/edit-metadata/edit-metadata-mgr.get_zh_CN.properties
@@ -1,3 +1,3 @@
-edit-metadata-mgr.heading=\u7f16\u8f91\u5143\u6570\u636e
+﻿edit-metadata-mgr.heading=\u7f16\u8f91\u5143\u6570\u636e
 edit-metadata-mgr.button.save=\u4fdd\u5b58
 edit-metadata-mgr.update.failed=\u65e0\u6cd5\u66f4\u65b0\u5143\u6570\u636e\u3002
