--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_zh_CN.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-condition.get_zh_CN.properties
@@ -1,4 +1,4 @@
-header.condition.if=\u5982\u679c\u5df2\u6ee1\u8db3\u6240\u6709\u6761\u4ef6\uff1a
+﻿header.condition.if=\u5982\u679c\u5df2\u6ee1\u8db3\u6240\u6709\u6761\u4ef6\uff1a
 header.condition.unless=\u9664\u975e\u5df2\u6ee1\u8db3\u6240\u6709\u6761\u4ef6\uff1a
 menu.item.show-more=\u663e\u793a\u66f4\u591a...
 label.noRendererForType=\u9519\u8bef\uff1a\u7c7b\u578b ''{0}'' \u65e0\u5448\u73b0\u5668
