SIMP CHINESE: Simplified Chinese fixed files for RM 2.2 UI Bundle based on EN rev71684
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73885 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -198,13 +198,13 @@ message.file-destruction-report.failure=\u65e0\u6cd5\u751f\u6210\u9500\u6bc1\u62
 message.file-destruction-report.success=\u5df2\u751f\u6210\u9500\u6bc1\u62a5\u544a
 message.end-retention.failure=\u65e0\u6cd5\u7ed3\u675f\u4fdd\u7559
 message.end-retention.success=\u4fdd\u7559\u5df2\u7ed3\u675f
-message.file-success=\u5df2\u6210\u529f\u5c06\u62a5\u544a\u5f52\u6863\u4e3a ''{0}''
+message.file-success=\u5df2\u6210\u529f\u5c06\u79fb\u4ea4\u62a5\u544a\u5f52\u6863\u4e3a ''{0}''
 message.file-failure=\u65e0\u6cd5\u5b8c\u6210\u5f52\u6863\u64cd\u4f5c
 message.file-hold-report.failure=\u65e0\u6cd5\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 message.file-hold-report.success=\u5df2\u751f\u6210\u4fdd\u5b58\u62a5\u544a
 
 ## File Plan Status Indicators
-status.rm-accession=\u5165\u7ba1\u6302\u8d77
+status.rm-accession=\u5165\u7ba1\u5f85\u6c7a
 status.rm-accessioned=\u5df2\u5165\u7ba1
 status.rm-closed=\u5df2\u5173\u95ed
 status.rm-cutoff=\u4e2d\u65ad
